--- a/자바스크립트와 변수.md
+++ b/자바스크립트와 변수.md
@@ -27,30 +27,30 @@
 ---
 ## ECMAscript
 
--다양한 자바스크립트버전이 나옴에따라 혼동을 없애기위해 어느정도의 일관성을 부여하기위해 정해진 표준사양.(핵심문법의 틀을 정해둔것)
+- 다양한 자바스크립트버전이 나옴에따라 혼동을 없애기위해 어느정도의 일관성을 부여하기위해 정해진 표준사양.(핵심문법의 틀을 정해둔것)
 - 우리가 쓰는 자바스크립트는 쉽게말해 ECMAScirpt와 별도의 클라이언트사이드 API들(DOM, BOM, SVG, Web compoent 등등)의 합쳐진 개념이다.
 ---
 ### 인터프리터언어
 
- 상용자가 별도의 컴파일작업을 수행하지않는 프로그래밍언어.
+- 상용자가 별도의 컴파일작업을 수행하지않는 프로그래밍언어.
 상용회되어있는 모던 자바스크립트엔진들은 인터프리터와 컴파일러의 장점을 결합하여 느렸던 인터프리터의 단점을 보완하였다.
 
-자바스크립트는 그중에서도 명령형,함수형,프르토타입기반객체지향 프로그래밍 세가지를 모두 지원하는 멀티패러다임프로그래밍언어이다.
+- 자바스크립트는 그중에서도 명령형,함수형,프르토타입기반객체지향 프로그래밍 세가지를 모두 지원하는 멀티패러다임프로그래밍언어이다.
 
-하지만 인터넷익스플로러에서는 ES6를 지원하지않음으로 Bable같은 트랜스파일러를 이용해 ES6이상의 소스코드를 ES5이하로 다운그레이드 하여 읽어야한다.
+- 하지만 인터넷익스플로러에서는 ES6를 지원하지않음으로 Bable같은 트랜스파일러를 이용해 ES6이상의 소스코드를 ES5이하로 다운그레이드 하여 읽어야한다.
 
-----
+---
 ## 브라우저와 Node.js의 차이점
 
-브라우저는 html,css,자바스크립트를 실행해 우베페이지를 렌더링
-Node.js는 브라우저 외부에서 JS실행 환경을 제공
+- 브라우저는 html,css,자바스크립트를 실행해 우베페이지를 렌더링
+- Node.js는 브라우저 외부에서 JS실행 환경을 제공
 이 각각의 주요목적이다.
-즉, 브라우저는 랜더링하기위한 DOM API를지원, Node.js는 파일을 수정하는 CRUD기능을 지원 한다.
+- 즉, 브라우저는 랜더링하기위한 DOM API를지원, Node.js는 파일을 수정하는 CRUD기능을 지원 한다.
 
 ---
 ## npm
 
-자바스크립트 패키지매니저. node.js에서 사용가능한 모든 모듈을 패키지해서 모아둔 저장소이며 패키지 관리를위한 CLI를 제공.
+- 자바스크립트 패키지매니저. node.js에서 사용가능한 모든 모듈을 패키지해서 모아둔 저장소이며 패키지 관리를위한 CLI를 제공.
 
 ---
 # 변수
@@ -68,63 +68,62 @@ Node.js는 브라우저 외부에서 JS실행 환경을 제공
 하나의 변수에는 반드시 하나의 변수값만 들어갈수있다.
 만약 하나의 변수에 여러값을 포함하려면, 배열이나 객체(리스트,딕셔너리등의 자료구조)를 써서 여러개의 값을 그룹화, 하나의 값처럼 사용가능하다.
 
--- 변수에 값을 저장하는것 = 할당 assignment
--- 변수의 값을 읽어들이는것= 참조 reference
-// 가독성이 좋은 변수이름을 선언하는것이 현업에선 필수사항이다 
+- 변수에 값을 저장하는것 = 할당 assignment
+- 변수의 값을 읽어들이는것= 참조 reference(가독성이 좋은 변수이름을 선언하는것이 현업에선 필수사항이다) 
 ---
 ## 식별자 identifier
 
-어떤 값을 구별해서 식별할수있는 고유이름
+- 어떤 값을 구별해서 식별할수있는 고유이름
 ( 함수,클래스,변수 심지어 인터넷도메인주소도 식별자 라고 생각할 수 있다.)
-중요한것은 어떤 값이 아닌, 메모리 주소를 기억하고있는것이 식별자 이다.
+- 중요한것은 어떤 값이 아닌, 메모리 주소를 기억하고있는것이 식별자 이다.
 
 ### 식별자네이밍 규칙
-특수문자를 제외하고 문자,숫자,언더바 _ , 달러 $ 포함가능
+- 특수문자를 제외하고 문자,숫자,언더바 _ , 달러 $ 포함가능
 (ES5 부터는 유니코드도 사용가능하지만, 가독성을위해 권장하지않음)
-숫자로시작은 불가능, 문자 언더스코어 달러로만 시작가능
-대소문자 구분, 별도의 주석없이도 이해할수 있어야 좋은 네이밍
-예약어도 식별자로 사용불가능
-    예약어란 이미 자바스크립트에서 사용되고있는 단어들
-
-### 네이밍컨벤션
+- 숫자로시작은 불가능, 문자 언더스코어 달러로만 시작가능
+- 대소문자 구분, 별도의 주석없이도 이해할수 있어야 좋은 네이밍
+- 예약어도 식별자로 사용불가능(예약어란 이미 자바스크립트에서 사용되고있는 단어들)
+```
+네이밍컨벤션
 카멜케이스 camelCase
 스네이크케이스 snake_case
 파스칼케이스 PascalCase
 헝가리언케이스 변수명에 자료형을구분지을 접두사를 달아서표기(intnScore)
+```
 ---
 ## 변수의 선언 variable declaration
 
-변수를 사용하기위해선 반드시 변수선언(메모리공간을 할당)을 해야한다.
+- 변수를 사용하기위해선 반드시 변수선언(메모리공간을 할당)을 해야한다.
 이때 메모리공간과 변수이름을 연결하는것을 연결(name Binding)이라 한다.
-변수선언에는 var, let, const 가 있지만 let과 const 만 쓰인다.
+- 변수선언에는 var, let, const 가 있지만 let과 const 만 쓰인다.
 (var의 사용은 예전버전에서의 잔해들이 남아있기때문이고 하위호환성이 필수시되는 자바스크립트를 유지보수하기위해서도 var에대한 개념을 알아야한다)
 
 ### 변수 선언시 선언단계->초기화단계를 거친다
-선언:변수이름을 등록하여 JS엔진에 변수존재를 인식시킴
-초기화: 값을 저장하기위한 메모리를 확보한후 undefine을 할당하여 초기화.
-    초기화를 하지않으면? 남아있던 쓰레기값(garbage value)가 나올수 있다.
+- 선언:변수이름을 등록하여 JS엔진에 변수존재를 인식시킴
+- 초기화: 값을 저장하기위한 메모리를 확보한후 undefine을 할당하여 초기화.
+(초기화를 하지않으면? 남아있던 쓰레기값(garbage value)가 나올수 있다.)
 
-식별자는 선언되지않은 변수에 접근하면 참조애러가 발생(Reference Error)
+- 식별자는 선언되지않은 변수에 접근하면 참조애러가 발생(Reference Error)
 ---
 ## 변수의 호이스팅 value hoisting
-자바스크립트가 가지는 독특한(개발자라면 절대 써서는 안되는) 특징이다.
+- 자바스크립트가 가지는 독특한(개발자라면 절대 써서는 안되는) 특징이다.
 일반적인 언어들과 다르게 선언문을 러닝타임 이전에 먼저 실행시켜 말그대로 선언문을 hoisting효과를 주는것이다.(실제로 코드위쪽으로 올리는것이아님)
 
-변수선언뿐 아니라 var let const function class를 사용하여 선언하는 식별자는 모두 호이스팅된다
+- 변수선언뿐 아니라 var let const function class를 사용하여 선언하는 식별자는 모두 호이스팅된다
 ---
 ## 변수값 할당
-선언했던 변수에 값을 할당할때 할당연산자 = 를 쓴다.(우변의 값을 좌변의 변수에할당)
+- 선언했던 변수에 값을 할당할때 할당연산자 = 를 쓴다.(우변의 값을 좌변의 변수에할당)
  이때 var score = 30; 처럼 선언과 할당을 하나의 문(statement)으로 단축표현할 수 있다.
 
-하지만 이렇게 하나의 문으로 선언및 할당 하더라도 선언문은 런타임이전에 할당문은 런타임중에 실행되므로 잘 생각해서 사용해야한다.
+- 하지만 이렇게 하나의 문으로 선언및 할당하더라도 선언문은 런타임이전에 할당문은 런타임중에 실행되므로 잘 생각해서 사용해야한다.
 ---
 ## 변수값 재할당
-사실상 변수는 선언과동시에 undefined로 초기화 되기때문에 변수에 값을 할당하는것도 재할당이다. 즉, 변수의 값을 지웠다가 다시주는게아닌 기존의 변수에 새로운 변수값을 할당하것이다.
+- 사실상 변수는 선언과동시에 undefined로 초기화 되기때문에 변수에 값을 할당하는것도 재할당이다. 즉, 변수의 값을 지웠다가 다시주는게아닌 기존의 변수에 새로운 변수값을 할당하것이다.
 이렇게 덮어씌워 변화할 수 있기 때문에 '변수' 라고 명하는것이다.
 만약 재할당없는 불변값은 상수(constance)라 한다.
 
 ## 가비지콜렉터 garbage collector
-이때 재할당된 변수가 이전에 가지고있던 변수값(들)은 더이상 쓸모가없다.
+- 이때 재할당된 변수가 이전에 가지고있던 변수값(들)은 더이상 쓸모가없다.
 애플리케이션이 할당했었던 이런 사용되지않는 메모리공간(식별자도 참조하지않는)을 해재하고 메모리 누수를 방지하는 역할을 하는것이 가비지콜렉터다.
-     언매니지드언어와 매니지드언어의 차이는 사용자가 직접 메모리를 할당하고 해재하는것이 언매니지드(C언어) 가비지콜렉터가 대신해주는것이 매니지드(JS)이다.
+- 언매니지드언어와 매니지드언어의 차이는 사용자가 직접 메모리를 할당하고 해재하는것이 언매니지드(C언어) 가비지콜렉터가 대신해주는것이 매니지드(JS)이다.
 ---
