--- a/데이터 타입.md
+++ b/데이터 타입.md
@@ -1,9 +1,57 @@
 # 데이터타입 data type
 - 자바스크립트의 모든값은 데이터타입을 갖는다.
 - 총 7개의 타입이 있으며 원시타입과 객체타입으로 구분.
+```
+- 원시타입 primitive
+숫자,문자,불리언,undefined,null,symbol
 
-## 원시타입 primitive
-- 
+- 객체타입 object/reference
+함수, 객체, 배열
+```
+---
 
-## 객체타입 object/reference
-- 
+## 숫자 타입
+- 다른언어와 다르게 하나의 숫자타입 가짐.(모든수를 실수로 처리함)
+```
+- 숫자타입의 특별한 값 세가지
+10/0 = 양의무한대 Infinity
+10/-0 = 음의무한대 -Infinity
+1*문자열 = 산술연산불가 NaN(not-a-number) //대소문자주의
+```
+
+## 문자열 타입
+- 텍스트데이터를 나타내며, 0개이상의 16bit 유니코드문자의 집합으로 표현
+- 작은따옴표,큰따옴표,백틱(``) 으로 선언가능(공백도 포함가능)
+- JS에서 문자열은 변경불가능한 원시타입임을 기억
+
+## 템플릿 리터럴
+- E6 부터 생긴 문자열표기법, 백틱을 사용해 표현
+- 멀티라인문자열, 표현식삽입, 태그드탬플릿 같은 문자열 처리기능 제공(런타임에 일반문자열로 변환됨)
+### 멀티라인문자열
+- 줄바꿈을위해 백슬래시로시작하는 escape sequence 사용(템플릿 리터럴에선 개행문자없이 자동적용)
+
+## 표현식 삽입
+- 문자열연산자 + 를 통해 삽입
+- 템플릿 리터럴에선 표현식삽입( ${} )으로 표현식 감싸서 표현식 결과를 강제로 문자열로 타입캐스팅.(표현식삽입은 반드시 템플릿리터럴 내에서만 사용)
+
+## 불리언 타입
+- 조건문에서 사용되는 ture 와 false
+
+## undefined
+- var 키워드로 선언한 변수값은 암묵적으로 undefined로 초기화.
+- 사용자가 직접 값이 비어있음을 나타내고싶을땐 null 할당하는것이 좋음.
+```
+JS에서 변수=선언한다 / 함수=정의한다 임을 기억
+```
+
+## null 타입
+- 변수에 값이 없음을 의미하며 대소문자 주의(null 이여야 함)
+- 함수가 반환할 유효값이 없을경우도 null을 반환함
+
+## symbol 타입
+- 변경불가능한 원시타입값으로 중복되지않는 유일한 값.(객체의 유일한 프로퍼티 키 생성에 사용)
+- 심볼은 특이하게 Symbol 함수를 호출하여 생성함.
+
+## 객체 타입
+- 앞서 언습한 타입이외는 모두 객체타입이며, JS의 구성요소 대부분이 객체 임을 기억하자.
+
