동적파입 내용추가

--- a/데이터 타입.md
+++ b/데이터 타입.md
@@ -55,3 +55,22 @@ JS에서 변수=선언한다 / 함수=정의한다 임을 기억
 ## 객체 타입
 - 앞서 언습한 타입이외는 모두 객체타입이며, JS의 구성요소 대부분이 객체 임을 기억하자.
 
+---
+
+# 데이터타입은 왜 필요한가
+
+- 값이라는것은 메모리에 저장,참조 할수 있어야한다. 메모리에 저장하려면 데이터타입에 맞는 크기를 할당해야 한다.
+- 식별자에게도 데이터타입과 동일한 타입을 부여함으로써, 데이터를 참조할때 식별자의 데이터타입을 통해 얼마만큼의 메모리를 참조해야하는지 파악할 수 있다.(컴파일러,인터프리터는 심볼테이블 이라는 구조를통해 식별자를 인식한다.)
+- 또한 데이터타입을통해 메모리에서 가져온 2진수를 어떻게 해석할지 결정할 수 있다. (01000001이 문자열인지 숫자65인지 아니면 알파벳A인지를 구분하는것)
+
+---
+
+# 동적타입과 정적타입
+- 정적타입: 변수 선언시 변수에 할당할 데이터타입을 사전에 선언, 변경불가능(컴파일 시점에 선언한 타입에맞는 값을 할당했는지 타입체크)
+- 동적타입: 변수 선언이아닌 할당에의해 타입이 결정(이를 타입추론 이라함)되며 재할당에의해 언제든지 동적으로 변경가능함.
+
+## 동적타입에서의 주의점
+- 변수는 제한적으로사용하여 오류를 최소화한다
+- 변수의 유효범위(스코프)는 최소한으로, 전역변수또한 최소한으로 사용한다
+- 변수보다는 상수를 이용해 값의 변경을 억제한다
+- 변수네이밍, 특히 식별자의 유효범위가 넓을수록 네이밍은 중요하다.
