연산자 내용추가

--- a/연산자.md
+++ b/연산자.md
@@ -2,3 +2,94 @@
 - 하나 이상의 표현식을 대상으로 산술,할당,비교,논리,타입,지수연산을 수행하여 하나의값 만듦.
 - 피연산자 operand: 연산의 대상이며 반드시 값으로 평가 가능한 표현식 이여야함.( 피연산자+연산자=연산자표현식=값으로 평가가능한 표현식)
 
+## 산술연산자
+- 피연산자 대상 수학적계산
+- 이항 산술연산자 (+ - * / %)
+- 단항 산술연산자 (++ -- + -)
+```
+단항산술연산자 ++ 와 --는 피연산자에 암묵적 재할당을통해 값을 변경한다.
+피연산자 앞에위치:전위증가/감소연산자 라고하며 피연산자의 증감 후 다른연산
+피연산자 뒤에위치:후위증가/감소연산자 라고하며 다른연산 후 피연산자의 증감
++ : 숫자타입이 아닌 피연산자를 숫자타입으로 변환하여 반환(재할당이아닌 새로운값 생성후 반환)
+- : 피연산자의 부호를 반전시키고 숫자타입으로 변환하여 반환(+와 같은원리)
+```
+
+## 문자열 연결 연산자
+- 피연산자중 하나이상이 문자열-> +는 문자열 연결연산자로 동작
+- 암묵적타입변환,타입강제변환: 불리언타입같은 숫자열이 아닌데이터를 숫자로 인식하여 연산하는것.
+
+## 할당 연산자 assignment operator
+- 우항의 결과를 좌항의 변수에 할당.
+- 할당문은 할당된 값으로 평가되어 표현식인 문 이다.
+```
+x=5 : x=5
+x+=5 : x= x+5
+x-=5 : x= x-5
+x*5 : x= x*5
+x/=5 : x=x/5
+x%=5 : x=x%5
+```
+## 비교연산자 comparison operator
+- 좌항 우항 비교후 불리언값 반환, 주로 조건식에서 쓰임
+- 일치비교 strick equality : 값과 타입이 같은지 ===, !==
+- 동등비교 loose equality : 값이 같은지 ==, !=
+- 동등비교에서는 암묵적 타임자동변환으로 타입을 일치시킨후 값을 비교함
+- 동등비교사용시 부정적인영향을주는 안티패턴이 되기쉽다. 일치비교가 좋다.
+- Object.is(a,b)메서드는 일치비교연산자와 동일하게 작동한다.
+```
+자신과 일치하지 않는 유일한 값인 NaN
+빌트인함수 isNaN(숫자)을 통해 숫자가 NaN인지 확인할 수 있다.
+양의0과 음의0도 일치동등비교에서 같다고 나오니 주의하자.
+```
+
+## 대소관계 비교연산자
+- 크기비교 >, <, >=, <= 하여 불리언값 반환
+
+## 삼항조건 연산자 ternary operator
+- 조건식의 결과에따라 반환값을 결정, js의 유일한 삼항연산자
+- 표현식은 값처럼 사용가능한 조건문이다.(if,else문은 값처럼 사용불가능하다.)
+- 조건에따라 수행할 문이 하나라면 삼항조건, 여러개라면 if,else가 가독성 좋다.
+```
+var result = 조건식 ? 'a' : 'b';
+조건식이 true = a 반환
+조건식이 false= b 반환
+```
+
+## 논리 연산자 logical operator
+- 우항과 좌항의 피연산자 논리연산
+- 부정논리연산은 우항만 논리연산, 불리언값 반환(피연산자 불리언타입으로 암묵적타입변환)
+- 논리합,논리곱 연산자 표현식평과결과는 불리언이 아닐수있고, 2개의 피연산자중 하나로 평가될수 있다.
+```
+논리합(||) 연산자
+true || true;   // -> true
+true || false;  // -> true
+false || true;  // -> true
+false || false; // -> false
+
+논리곱(&&) 연산자
+true && true;   // -> true
+true && false;  // -> false
+false && true;  // -> false
+false && false; // -> false
+
+논리 부정(!) 연산자
+!true;  // -> false
+!false; // -> true
+```
+
+## 쉼표연산자
+- 좌->우 차례대로 피연산자 평가후 마지막 피연산자의 평가결과 반환
+```
+var x, y, z;
+x = 1, y = 2, z = 3; // 3
+```
+
+## 그룹 연산자
+- 소괄호로 피연산자를 묶어 가장먼저 최우선 평가, 즉 우선순위 조절가능
+
+## typeof 연산자
+- 피연산자의 데이터타입을 문자열로반환(null로 반환하는경우는 없음)
+- null값은 object로 반환하는것은 오류, null인지확인하려면 일치연산자 사용
+- 선언하지않은 식별자는 undefined로 반환
+
+## 지수연산자 
