연산자 내용정리 마무리

--- a/연산자.md
+++ b/연산자.md
@@ -87,9 +87,22 @@ x = 1, y = 2, z = 3; // 3
 ## 그룹 연산자
 - 소괄호로 피연산자를 묶어 가장먼저 최우선 평가, 즉 우선순위 조절가능
 
-## typeof 연산자
+## typeof 연산자 typeof ~
 - 피연산자의 데이터타입을 문자열로반환(null로 반환하는경우는 없음)
 - null값은 object로 반환하는것은 오류, null인지확인하려면 일치연산자 사용
 - 선언하지않은 식별자는 undefined로 반환
 
-## 지수연산자 
+## 지수연산자 a ** b
+- ES7에서 도입, 좌항 피연산자를 밑, 우항피연산자를 지수로 거듭제곱 숫자값반환
+- 이전엔 Math.pow(a,b) 사용
+- 음수를 넣고싶으면 ()로 묶어야함
+- 이항연산자중 최우선순위 임을 기억.
+
+## 연산자 우선순위와 결합순서
+- 연산자의 우선순위는 기억하기어렵기때문에 우선순위가 높은연산자를 사용하여 우선순위를 명시적으로 조절하는것이 좋다.
+- 결합순사는 좌항부터,우항부터 인지에따라 다르다.
+```
+다양한 연산자가 있지만 지금 알고있는것 위주로 나열해보면
+좌항->우항:+ - / % < <= > >= && ||  [] ()
+우항->좌항:++ -- 할당연산자 !x +x -x ++x –x typeof
+```
