--- a/제어문.md
+++ b/제어문.md
@@ -1,1 +1,41 @@
-# 제어문
+# 제어문 control flow statement
+- 조건에따라 코드블록을 실행하거나 반복실행
+- 제어문의 사용은 가독성을 낮춤, 나중에 forEach,map같은 고차함수로 대체
+
+## 블록문 block statement / compound statement
+- 0개이상 문을 중괄호{} 묶음, 하나의 실행단위로 취급됨
+- 일반적으로 제어문이나 함수정의에 사용되며 단독사용도 가능
+- 자체종결성으로 세미콜론이 붙지않음을 주의
+
+## 조건문 conditional statement
+- 조건식의 평가결과에따라 실행결정, 불리언값으로 평가될수있는 표현식
+### if..else문
+- true면 if문 false면 else문이 실행
+- if 문의 조건식은 불리언값으로 평가되어야하며 아닐경우 암묵적으로 불리언값으로 강제변환되어 실행블록 결정함.
+- 블록내의 문이 하나라면 중괄호 생략가능
+```
+if (num > 0)      kind = '양수';
+else if (num < 0) kind = '음수';
+```
+- 삼항조건연산자로 바꿔쓸수있음을 기억하자.(if..else문은 표현식이아닌 문이므로 두번째 자리에 들어갈수 없음)
+```
+var kind = num ? (num > 0 ? '양수' : '음수') : '영';
+```
+### switch 문
+- 주어진 표현식을 평가-> 그 값과 일치하는 표현식을같는 case 문으로 흐름이동-> case문은 상황을 의미하는 표현식을 지정하고 콜론-> 뒤에 실행할문 위치.
+- switch 문의 표현식과 일치하는 case 문이 없다면 default 문으로 이동. default 문은 사용할 수도 않을 수도 있음.
+- if..else와 다르게 불리언보다는 문자열, 숫자값인 경우가많아 다양한 상황에따라 실행코드를 결정할 수 있음.
+```
+switch (표현식) {
+  case 표현식1:
+    switch 문의 표현식과 표현식1이 일치하면 실행될 문;
+    break;
+  case 표현식2:
+    switch 문의 표현식과 표현식2가 일치하면 실행될 문;
+    break;
+  default:
+    switch 문의 표현식과 일치하는 표현식을 갖는 case 문이 없을 때 실행될 문;
+}
+```
+
+
