--- a/제어문.md
+++ b/제어문.md
@@ -1,11 +1,14 @@
 # 제어문 control flow statement
 - 조건에따라 코드블록을 실행하거나 반복실행
 - 제어문의 사용은 가독성을 낮춤, 나중에 forEach,map같은 고차함수로 대체
+---
 
 ## 블록문 block statement / compound statement
 - 0개이상 문을 중괄호{} 묶음, 하나의 실행단위로 취급됨
 - 일반적으로 제어문이나 함수정의에 사용되며 단독사용도 가능
 - 자체종결성으로 세미콜론이 붙지않음을 주의
+
+---
 
 ## 조건문 conditional statement
 - 조건식의 평가결과에따라 실행결정, 불리언값으로 평가될수있는 표현식
@@ -22,9 +25,10 @@ else if (num < 0) kind = '음수';
 var kind = num ? (num > 0 ? '양수' : '음수') : '영';
 ```
 ### switch 문
-- 주어진 표현식을 평가-> 그 값과 일치하는 표현식을같는 case 문으로 흐름이동-> case문은 상황을 의미하는 표현식을 지정하고 콜론-> 뒤에 실행할문 위치.
+- swith문은 case의 표현식결과값이 일치하면 해당 case로 이동해 실행됨.
 - switch 문의 표현식과 일치하는 case 문이 없다면 default 문으로 이동. default 문은 사용할 수도 않을 수도 있음.
 - if..else와 다르게 불리언보다는 문자열, 숫자값인 경우가많아 다양한 상황에따라 실행코드를 결정할 수 있음.
+- 제어문에서 break를 하지않으면 처음부터끝까지 다 진행하는 fall through된다.
 ```
 switch (표현식) {
   case 표현식1:
@@ -37,5 +41,63 @@ switch (표현식) {
     switch 문의 표현식과 일치하는 표현식을 갖는 case 문이 없을 때 실행될 문;
 }
 ```
+---
 
+## 반복문 loop statement
+- 조건식의 결과가 참이면 실행, 거짓일때까지 반복
+- forEach, for...in, for...of문 등이 있으며 후에 알아보자.
+
+### for 문
+- 조건식이 거짓이될때까지 반복( 반복횟수가 명확할때 주로사용)
+```
+- 기본구조
+for (변수 선언문 또는 할당문; 조건식; 증감식) {
+  조건식이 참인 경우 반복 실행될 문;
+}
+```
+- 일반적으로 for문의 변수는 i(iteration)를 사용.
+- 변수선언문, 조건식, 증감식은 옵션으로 없어도 됨-> 무한루프
+- for문 안에 for문을 사용 (중첩for문)도 사용가능
+
+### while 문
+- 조건식이 참이면 반복실행( 반복횟수가 불명확할때 주로사용)
+- 조건식의 평가결과가 불리언이아니면 강제변환하며, 거짓일경우 종료됨.
+- 무한루프를 피하기위해 while문 안에 if..break를 씀으로써 탈출조건 만듦.
+```
+var count = 0;
+// count가 3보다 작을 때까지 코드 블록을 계속 반복 실행한다.
+while (count < 3) {
+  console.log(count); // 0 1 2
+  count++;
+}
+```
+### do..while문
+- 코드블록을 먼저실행한 후 조건식을 평가(반드시 코드블럭이 한번이상실행)
+```
+var count = 0;
+// count가 3보다 작을 때까지 코드 블록을 계속 반복 실행한다.
+do {
+  console.log(count);
+  count++;
+} while (count < 3); // 0 1 2
+```
+
+## break 문
+- 레이블 문, 반복문, switch문의 코드블록을 탈출, 이외의 문에는 문법에러발생.
+- 레이블문은 코드식별자가 붙은 문으로 실행순서를 제어하는데 사용되며, switch case default문 모두 레이블문이다.
+```
+- 중첩for문에서 내부for문이 아니라 바로 외부 for문탈출하기(레이블문이용)
+- 하지만 프로그램흐름이 복잡해지므로 오류가능성 높아짐.
+outer: for (var i = 0; i < 3; i++) {
+  for (var j = 0; j < 3; j++) {
+    // i + j === 3이면 outer라는 식별자가 붙은 레이블 for 문을 탈출한다.
+    if (i + j === 3) break outer;
+    console.log(`inner [${i}, ${j}]`);
+  }
+}
+
+```
+
+## continue 문
+- 코드의 실행을 중단하고 반복문의 증감식으로 실행흐름 이동. 탈출하진 않음.
 
