--- a/용어정리.md
+++ b/용어정리.md
@@ -52,9 +52,11 @@ utf-8(1바이트) 와는 호환되지만 utf-16(2,4바이트)호환안됨
 동적타입: 변수 선언이아닌 할당에의해 타입이 결정(이를 타입추론 이라함)되며 재할당에의해 언제든지 동적으로 변경가능함.
 
 # IPO 모델 
-
-
+인풋-프로세스-아웃풋 형태의 프로세스모델.
+사용자의 요청을 받고, 데이터베이스에 접속하여 자료를 찾아낸후, 응답하는형태
 # JavaScript engine 
+개발자가 작성한 자바스크립트 코드를 실행하는 인터프리터(소스코드를 해석하여 바로실행하는).
+대체로 웹브라우저이서 사용됨. 각각의 브라우저마다 다른개발자들에의해 개발된 다양한 엔진을 사용. 대표적으로 구글의 V8이있고 이는 크롬과 node.js에서도사용
 
 
 # JavaScript legacy (?)
@@ -62,8 +64,13 @@ utf-8(1바이트) 와는 호환되지만 utf-16(2,4바이트)호환안됨
 
 # 콘솔
 
-# DOM
 
+# DOM
+텍스트 파일로 만들어져 있는 웹 문서를 브라우저에 렌더링하려면 웹 문서를 브라우저가 이해할 수 있는 구조로 메모리에 올려야 한다. 브라우저의 렌더링 엔진은 웹 문서를 로드한 후, 파싱하여 웹 문서를 브라우저가 이해할 수 있는 구조로 구성하여 메모리에 적재하는데 이를 DOM이라 한다
+모든 요소와 요소의 어트리뷰트, 텍스트를 각각의 객체로 만들고 이들 객체를 부자 관계를 표현할 수 있는 트리 구조로 구성하여 자바스크립트가 DOM구조를 통해 동적으로 변경시켜 html문서 내의 모든 요소와 속성을 수정할수있음.
+이떄 자바스크립트가 DOM에 접근할수있게해주는 다리역활을 하는것이 DOM API(프로퍼티와 메소드의 집합)이다.
+브라우저가 HTML문서를 로드하고 파싱하여 생성된 모델은 DOM tree라고한다.
 
 # CRUD
-
+컴퓨터 소프트웨어가 가지는 기본데이터처리기능 Create,Read,Update,Delete의 묶음표현이며, 사용자 인터페이스가 갖춰야할 기능을 뜻하기도한다.
+(책에서 정보더 추가하기)
