변수 내용추가 및 연습js파일 생성

--- a/용어정리.md
+++ b/용어정리.md
@@ -34,13 +34,14 @@ utf-8(1바이트) 와는 호환되지만 utf-16(2,4바이트)호환안됨
 # 초기화, 쓰레기값, undefined
 초기화는 변수를 최초로선언했을때 처음 이뤄지는작업으로 이전 사용했던 변수값(쓰레기값)이 남아있을수 있으므로 undefined로 초기화 후 새로할당하는 변수값을 할당함.
 
-# 파싱, 런타임,
+# 파싱, 런타임
 주어진 정보를 하나의 프로그램 런타임환경에서 실행할수있는 자료로 분석후 변환하는것. 
 예를들어 HTML은 DOM Tree로 파싱, 자바스크립트는 메소두가 호출될때(컴파일될때) 파서가 호출되어 파싱.
 
 # 키워드(명령문)
 자바스크립트가 수행해야할 동작을 식별하는것.(자바스크립트엔진이 키워드를만나면 정해진 동작을 실행하고 제어문의 시작과끝을 제어함.) 또한 키워드는 예약어이므로 변수명으로 사용하면안됨.
 (break, case, continue, do, for, switch 등등)
+
 # ECMA Script(ES)
 표준화된 스크립트 프로그래밍 언어로써, 자바스크립트를 표준화하기위해 만들어짐. 
 
@@ -74,3 +75,14 @@ utf-8(1바이트) 와는 호환되지만 utf-16(2,4바이트)호환안됨
 # CRUD
 컴퓨터 소프트웨어가 가지는 기본데이터처리기능 Create,Read,Update,Delete의 묶음표현이며, 사용자 인터페이스가 갖춰야할 기능을 뜻하기도한다.
 (책에서 정보더 추가하기)
+클라이언트가 서버에 요청보낼때 보내는 요청들은 CRUD로 분류할수있다.
+사용자가 사진을 올리면 c, 사진을 불러오려고하면 r, 정보를바꾸려고하면 u, 지우려고하면 d 의 요청이 서버로 전송됨.각각의 요청은 서버주소를 가지고있어서 사용자가 요청하면 해당주소로 요청됨.
+여기서 restful API가 생겨나고 여기서는 CRUD를 하나의주소로 관리함.
+하지만 각각을 구분하기위해 c= POST, r=GET, u=PUT전체/PATCH일부, d=DELETE 메소드를 달아서 서버로 전송.
+
+# HTTP
+
+# Tools(npm, webpack, barbel, git ...)
+
+# antipattern
+어떤 결과값을 도출하기위해 사용된 식이 잘못되거나 복잡하여 오류가능성이 있는것.
