--- a/자바스크립트와 변수.md
+++ b/자바스크립트와 변수.md
@@ -83,11 +83,12 @@
 - 숫자로시작은 불가능, 문자 언더스코어 달러로만 시작가능
 - 대소문자 구분, 별도의 주석없이도 이해할수 있어야 좋은 네이밍
 - 예약어도 식별자로 사용불가능(예약어란 이미 자바스크립트에서 사용되고있는 단어들)
+- 회사에가면 그 회사에서 사용하는 네이밍컨벤션을 주므로 반드시 숙지해야함.
 ```
 네이밍컨벤션
-카멜케이스 camelCase
+카멜케이스 camelCase //일반적 함수에
 스네이크케이스 snake_case
-파스칼케이스 PascalCase
+파스칼케이스 PascalCase //생성자 함수나 클래스이름에
 헝가리언케이스 변수명에 자료형을구분지을 접두사를 달아서표기(intnScore)
 ```
 ---
@@ -114,13 +115,16 @@
 ## 변수값 할당
 - 선언했던 변수에 값을 할당할때 할당연산자 = 를 쓴다.(우변의 값을 좌변의 변수에할당)
  이때 var score = 30; 처럼 선언과 할당을 하나의 문(statement)으로 단축표현할 수 있다.
-
 - 하지만 이렇게 하나의 문으로 선언및 할당하더라도 선언문은 런타임이전에 할당문은 런타임중에 실행되므로 잘 생각해서 사용해야한다.
+- 즉 선언문과 할당문이 같이 한줄애 있더라도, 선언문따로 할당문따로 총 2번 작동한다는걸 알아야 한다.
+
 ---
 ## 변수값 재할당
 - 사실상 변수는 선언과동시에 undefined로 초기화 되기때문에 변수에 값을 할당하는것도 재할당이다. 즉, 변수의 값을 지웠다가 다시주는게아닌 기존의 변수에 새로운 변수값을 할당하것이다.
 이렇게 덮어씌워 변화할 수 있기 때문에 '변수' 라고 명하는것이다.
 만약 재할당없는 불변값은 상수(constance)라 한다.
+- allocate: 변수값을 집어넣을 새로운 공간을 만들어서 할당하는것
+- release : 재할당하기위해 식별자를 임시로 붙여놨던 undefined에서 떼어내는것
 
 ## 가비지콜렉터 garbage collector
 - 이때 재할당된 변수가 이전에 가지고있던 변수값(들)은 더이상 쓸모가없다.
