정리내용 추가및 수정

--- a/연산자.md
+++ b/연산자.md
@@ -5,7 +5,8 @@
 ## 산술연산자
 - 피연산자 대상 수학적계산
 - 이항 산술연산자 (+ - * / %)
-- 단항 산술연산자 (++ -- + -)
+- 단항 산술연산자 (++ -- + -) / 왠만하면 이건 쓰지말고 풀어서써라.
+    - 실제로 ++ 를 사용금지하는 회사도많다. side effect가 많다.
 ```
 단항산술연산자 ++ 와 --는 피연산자에 암묵적 재할당을통해 값을 변경한다.
 피연산자 앞에위치:전위증가/감소연산자 라고하며 피연산자의 증감 후 다른연산
@@ -36,6 +37,7 @@ x%=5 : x=x%5
 - 동등비교에서는 암묵적 타임자동변환으로 타입을 일치시킨후 값을 비교함
 - 동등비교사용시 부정적인영향을주는 안티패턴이 되기쉽다. 일치비교가 좋다.
 - Object.is(a,b)메서드는 일치비교연산자와 동일하게 작동한다.
+- 한마디로 동등비교대신 일치비교를 써라.동등비교와 for문은 사용안할수록좋다.
 ```
 자신과 일치하지 않는 유일한 값인 NaN
 빌트인함수 isNaN(숫자)을 통해 숫자가 NaN인지 확인할 수 있다.
@@ -99,7 +101,7 @@ x = 1, y = 2, z = 3; // 3
 - 이항연산자중 최우선순위 임을 기억.
 
 ## 연산자 우선순위와 결합순서
-- 연산자의 우선순위는 기억하기어렵기때문에 우선순위가 높은연산자를 사용하여 우선순위를 명시적으로 조절하는것이 좋다.
+- 연산자의 우선순위는 기억하기어렵기때문에 우선순위가 높은연산자를 사용하여 우선순위를 명시적으로 조절하는것이 좋다. 한마디로 그냥 그룹연산자()써라.
 - 결합순사는 좌항부터,우항부터 인지에따라 다르다.
 ```
 다양한 연산자가 있지만 지금 알고있는것 위주로 나열해보면
