--- a/제어문.md
+++ b/제어문.md
@@ -5,6 +5,7 @@
 
 ## 블록문 block statement / compound statement
 - 0개이상 문을 중괄호{} 묶음, 하나의 실행단위로 취급됨
+- scope의 의미를 가지는것도 중요.
 - 일반적으로 제어문이나 함수정의에 사용되며 단독사용도 가능
 - 자체종결성으로 세미콜론이 붙지않음을 주의
 
@@ -29,6 +30,7 @@ var kind = num ? (num > 0 ? '양수' : '음수') : '영';
 - switch 문의 표현식과 일치하는 case 문이 없다면 default 문으로 이동. default 문은 사용할 수도 않을 수도 있음.
 - if..else와 다르게 불리언보다는 문자열, 숫자값인 경우가많아 다양한 상황에따라 실행코드를 결정할 수 있음.
 - 제어문에서 break를 하지않으면 처음부터끝까지 다 진행하는 fall through된다.
+- switch문도 안쓸수록 좋다.
 ```
 switch (표현식) {
   case 표현식1:
@@ -44,6 +46,9 @@ switch (표현식) {
 ---
 
 ## 반복문 loop statement
+
+- 실제로 js에서 활용도가 너무높아서 매우중요중요중요하다
+
 - 조건식의 결과가 참이면 실행, 거짓일때까지 반복
 - forEach, for...in, for...of문 등이 있으며 후에 알아보자.
 
