--- a/데이터 타입.md
+++ b/데이터 타입.md
@@ -12,6 +12,7 @@
 
 ## 숫자 타입
 - 다른언어와 다르게 하나의 숫자타입 가짐.(모든수를 실수로 처리함)
+- 숫자타입은 전부 리터럴로 표현해야하며 아래의 세가지도 리터럴임을 기억
 ```
 - 숫자타입의 특별한 값 세가지
 10/0 = 양의무한대 Infinity
@@ -23,10 +24,13 @@
 - 텍스트데이터를 나타내며, 0개이상의 16bit 유니코드문자의 집합으로 표현
 - 작은따옴표,큰따옴표,백틱(``) 으로 선언가능(공백도 포함가능)
 - JS에서 문자열은 변경불가능한 원시타입임을 기억
+- 일반적으로는 ''를 많이쓴다.
 
 ## 템플릿 리터럴
 - E6 부터 생긴 문자열표기법, 백틱을 사용해 표현
+- 일반적인 문자열을 줄바꿈못하는건? ASI 떄문.
 - 멀티라인문자열, 표현식삽입, 태그드탬플릿 같은 문자열 처리기능 제공(런타임에 일반문자열로 변환됨)
+
 ### 멀티라인문자열
 - 줄바꿈을위해 백슬래시로시작하는 escape sequence 사용(템플릿 리터럴에선 개행문자없이 자동적용)
 
@@ -73,4 +77,6 @@ JS에서 변수=선언한다 / 함수=정의한다 임을 기억
 - 변수는 제한적으로사용하여 오류를 최소화한다
 - 변수의 유효범위(스코프)는 최소한으로, 전역변수또한 최소한으로 사용한다
 - 변수보다는 상수를 이용해 값의 변경을 억제한다
+    - 즉 재할당은 안할수록 좋다. 변수를 안쓸수록 적게쓸수록 좋다->그래서나온게 타입스크립트다.
+- 변수를 써야겠다, 이게 정말 꼭 변수로 설정해야하나 라는걸 다시한번 생각.
 - 변수네이밍, 특히 식별자의 유효범위가 넓을수록 네이밍은 중요하다.
