--- a/표현식과 문.md
+++ b/표현식과 문.md
@@ -40,6 +40,7 @@ function() {} //함수
 - 이는 표현식은 값처럼 사용할수있기때문에 문법적으로 값이 위치할곳에는 표현식도 위차할수 있음을 뜻한다
 
 ## 문 (명령문)
+- 명령의 최소 실행단위, 여러개의 토큰으로 이뤄져있음.
 - 문과 표현식의 차이를 확실하게 알아야 버그를 줄이고 코드품질을 높일수있다
 - statement는 프로그램의 기본단위(최소실행단위)이다. 프로그램은 문의 집합이며 문을 순서에맞게 나열하는것이 프로그래밍이다.
 - 선언문, 할당문, 조건문, 반복문 등으로 구분되며 컴퓨터에 명령을 내린다.
