명시적 타입변환 내용추가

--- a/타입변환과 단축평가.md
+++ b/타입변환과 단축평가.md
@@ -79,3 +79,109 @@ undefined 타입
 false, undefined, null, 0, -0, NaN, 빈문자열은 Falsy
 Falsy가 아닌 나머지는모두  Truthy로 평가된다
 ```
+
+## 명시적 타입변환
+- 문자열 타입변환
+```
+String 생성자 함수를 new 연산자 없이 호출
+숫자 타입 => 문자열 타입
+String(1);        // -> "1"
+String(NaN);      // -> "NaN"
+String(Infinity); // -> "Infinity"
+불리언 타입 => 문자열 타입
+String(true);     // -> "true"
+String(false);    // -> "false"
+
+Object.prototype.toString 메서드를 사용
+숫자 타입 => 문자열 타입
+(1).toString();        // -> "1"
+(NaN).toString();      // -> "NaN"
+(Infinity).toString(); // -> "Infinity"
+불리언 타입 => 문자열 타입
+(true).toString();     // -> "true"
+(false).toString();    // -> "false"
+
+문자열 연결 연산자를 이용
+숫자 타입 => 문자열 타입
+1 + '';        // -> "1"
+NaN + '';      // -> "NaN"
+Infinity + ''; // -> "Infinity"
+불리언 타입 => 문자열 타입
+true + '';     // -> "true"
+false + '';    // -> "false"
+```
+- 숫자열 타입으로 변환
+```
+Number 생성자 함수를 new 연산자 없이 호출
+문자열 타입 => 숫자 타입
+Number('0');     // -> 0
+Number('-1');    // -> -1
+Number('10.53'); // -> 10.53
+불리언 타입 => 숫자 타입
+Number(true);    // -> 1
+Number(false);   // -> 0
+
+parseInt, parseFloat 함수를 사용(문자열만 변환 가능)
+문자열 타입 => 숫자 타입
+parseInt('0');       // -> 0
+parseInt('-1');      // -> -1
+parseFloat('10.53'); // -> 10.53
+
++ 단항 산술 연산자를 이용
+문자열 타입 => 숫자 타입
++'0';     // -> 0
++'-1';    // -> -1
++'10.53'; // -> 10.53
+불리언 타입 => 숫자 타입
++true;    // -> 1
++false;   // -> 0
+
+* 산술 연산자를 이용
+문자열 타입 => 숫자 타입
+'0' * 1;     // -> 0
+'-1' * 1;    // -> -1
+'10.53' * 1; // -> 10.53
+불리언 타입 => 숫자 타입
+true * 1;    // -> 1
+false * 1;   // -> 0
+```
+- 불리언타입으로 변환
+```
+Boolean 생성자 함수를 new 연산자 없이 호출
+문자열 타입 => 불리언 타입
+Boolean('x');       // -> true
+Boolean('');        // -> false
+Boolean('false');   // -> true
+숫자 타입 => 불리언 타입
+Boolean(0);         // -> false
+Boolean(1);         // -> true
+Boolean(NaN);       // -> false
+Boolean(Infinity);  // -> true
+null 타입 => 불리언 타입
+Boolean(null);      // -> false
+undefined 타입 => 불리언 타입
+Boolean(undefined); // -> false
+객체 타입 => 불리언 타입
+Boolean({});        // -> true
+Boolean([]);        // -> true
+
+! 부정 논리 연산자를 두번 사용
+문자열 타입 => 불리언 타입
+!!'x';       // -> true
+!!'';        // -> false
+!!'false';   // -> true
+숫자 타입 => 불리언 타입
+!!0;         // -> false
+!!1;         // -> true
+!!NaN;       // -> false
+!!Infinity;  // -> true
+null 타입 => 불리언 타입
+!!null;      // -> false
+undefined 타입 => 불리언 타입
+!!undefined; // -> false
+객체 타입 => 불리언 타입
+!!{};        // -> true
+!![];        // -> true
+```
+
+## 단축평가
