--- a/객체리터럴.md
+++ b/객체리터럴.md
@@ -83,3 +83,60 @@ console.log(person['name']); // Lee
 ## 프로퍼티 삭제
 - delete 연산자의 피연산자가 프로퍼티key에 접근가능한 표현식이여야 한다.
 - 존재하지안흔 값이라면 에러없이 무시
+
+---
+
+# ES6 에서의 객체리터럴
+- ES6에서 프로퍼티 값으로 변수를 사용시, 변수 이름과 프로퍼티 키가 동일하면 프로퍼티 키를 생략(property shorthand)할 수 있다. 이때 프로퍼티 키는 변수 이름으로 자동 생성된다.
+```
+// ES6
+let x = 1, y = 2;
+
+// 프로퍼티 축약 표현
+const obj = { x, y };
+
+console.log(obj); // {x: 1, y: 2}
+```
+
+- 계산된 프로퍼티이름 computed property name
+    - key를 동적으로 생성시 [표현식] 으로 묶는것
+    - ES5는 객체리터럴 외부에서 [...], ES6는 내부에서도 계산된 프로퍼티이름으로 동적생성 가능.
+    ```
+    // ES6
+    const prefix = 'prop';
+    let i = 0;
+
+    // 객체 리터럴 내부에서 계산된 프로퍼티 이름으로 프로퍼티 키 동적 생성
+    const obj = {
+        [`${prefix}-${++i}`]: i,
+        [`${prefix}-${++i}`]: i,
+        [`${prefix}-${++i}`]: i
+    };
+
+    console.log(obj); // {prop-1: 1, prop-2: 2, prop-3: 3}
+    ```
+
+- 메서드 축약표현
+    - ES5 에서의 메서드 정의
+    ```
+    var obj = {
+        name: 'Lee',
+        sayHi: function() {
+        console.log('Hi! ' + this.name);
+        }
+    };
+
+    obj.sayHi(); // Hi! Lee
+    ```
+    - ES6 에서는 function 키워드 생략한 축약표현가능
+    ```
+    const obj = {
+        name: 'Lee',
+        // 메서드 축약 표현
+        sayHi() {
+            console.log('Hi! ' + this.name);
+        }
+    };
+
+    obj.sayHi(); // Hi! Lee
+    ```
