--- a/원시값과 객체비교.md
+++ b/원시값과 객체비교.md
@@ -1,1 +1,14 @@
-# 원시값
+- 원시타입과 객체타입의 일반적인 차이점
+    - 원시값을 변수에 할당하면 실제 값이 저장된다/ 객체는 참조값이 저장
+    - 값에의한 전달 pass by vlaue : 원시값을 갖는 변수를 다른 변수에 할당시, 원본 원시값이 복사 전달
+    - 참조에의한 전달 pass by reference : 객체를 가르키는 변수를 다른 변수에 할당시, 원본의 참조값이 복사 전달
+
+# 원시값 
+- 원시타입값은 변경불가능, 불변성 immutability, 읽기전용값(변경 불가능 이라는것은 변수가 아닌 변수값에 대한것임을 기억하자 변수는 바꿀수있다)
+    - 변수를 바꿀수없다? 그건 상수(변수할당은 한번만할수있다)
+
+- 원시값을 갖는 변수를 다른변수가 참조할경우 두 변수의 원시값은 서로 다른 메모리 공간에 저장된 별개의 값이 되어 어느 한쪽에서 재할당을 통해 값을 변경하더라도 서로 간섭할 수 없다는것을 기억하자
+
+## 문자열과 불변성
+- 문자열은 원시타입이며 생성이후에는 변경할 수 없다
+
