객체와 참조 내용추가

--- a/원시값과 객체비교.md
+++ b/원시값과 객체비교.md
@@ -11,4 +11,21 @@
 
 ## 문자열과 불변성
 - 문자열은 원시타입이며 생성이후에는 변경할 수 없다
+---
 
+# 객체
+- 프로퍼티는 갯수가 정해져있지않고 동적으로 추가 삭제 가능, 값도 제약없음(메모리 크기를 미리 알수 없음)
+- 자바스크립트 객체는 key를 인덱스로사용하는 hash table
+    - 클래스없이 객체를 생성할수있고 객체 생성후에도 동적으로 프로퍼티와 메서드를 추가할수있음.(사용하긴쉽지만 비효율적임)
+    - V8엔진에서는 이런 동적탐색 dynamic lookup 대신 hidden class방식을 사용하여 다른언어의 class 처럼 유사동작
+
+## 변경 가능한 값
+- 객체(참조) 타입의값,즉 객체 는 변경불가능한 mutable value
+- 변수에 객체를 할당하면 객체를 저장하는것이아닌 객체를 메모리의공간에 할당한 후, 객체가 할당된 그 공간의 주소를 변수값으로 가진다. 이때 객체가 저장된 그 메모리고간을  **참조값 reference value** 라 한다.
+- 즉 이 변경가능한 값이라는건 참조값이 변경가능하다는뜻이다. 그래서 재할당없이 객체안의 프로퍼티를 동적으로 추가 제거 갱신 삭제 모두 가능하다
+
+## 참조에 의한 전달
+- 참조라는 개념은 여러개의 식별자(변수)가 하나의 객체를 공유할수있다는 단점이있다.
+- 즉 first 라는 변수가 하나의 x객체를 가르키고있다면, first를 복사한 second변수도 x객체를 가르킨다.
+- 이때문에 first나 second 둘중 한곳에서 객체를 수정하면 다른한곳에도 영향을 준다.
+- 자바스크립트에서는 값에의한 전달만이 존재하지만, 이것도 애매하기떄문에 **공유에의한 전달 bass by sharing**이라고 표현한다(하지만 이것도 완벽한 표현이 아니다)
