용어정리 내용수정

--- a/용어정리2.md
+++ b/용어정리2.md
@@ -1,13 +1,45 @@
 # 리터럴
+실제 메모리에 저장되는 그 값들,혹은 값들이 저장되는 방식을 통칭 리터럴 이라함. 사람이 이해가능한 문자나 기호를 통해 값생성
+변수에 해당하는 값 , 데이터자체이며 불변성을가진다
+하지만 변수값=리터럴 이라는뜻이아닌 
+객체는 변할수있는데 왜 객체리터럴이라 하는가? -> 리터럴한 객체라는게아니라 객체를 만드는방식을뜻한다
 # 원시,객체타입
+원시값은 불변성을가진 변수값.
+프로퍼티들로 이뤄진 변수.
 # 참조가능과 아닌것,참조에러
+변수에 객체를 할당하면 객체를 저장하는것이아닌 객체를 메모리의공간에 할당한 후, 객체가 할당된 그 공간의 주소를 변수값으로 가진다. 이때 객체가 저장된 그 메모리고간을  참조값 reference value 라 한다. 이떄 이 객체는 변수가 참조가능하다
+존재하지않는것 참조했을때 참조에러
 # 가비지콜렉터
+background 에서 데몬 쓰레드로 돌아가면서 접근 불가능한, 즉 주소를 알고있는 식별자가 없는 상태가 된 객체를 정리
+mark-and-sweep’알고리즘: 전체루트를 쭉 내려가면서 객체들에 mark한다. 한바퀴돌았는데 mark되지않은건 sweep한다
+깊게들어가면 generational(영올드)incremental(나눠서) idle-time(프로그램유휴상태일때)
+
 # 언매니지드 매니지드
+
 # 표현식과 값
+
 # 선언과 정의
+
 # null타입 사용
+
 # 변수의 스코프
+
 # 전역변수 문제점
+
 # 단축평가
+
 # 콜백함수
+
 # 부수효과
+
+#  symbol타입이 사용된 예시 —> 간략하게
+
+# 블록문/코드블록
+
+# 조건문(switch)
+
+# 반복문
+
+# break문
+
+# continue문
