선언과정의 및 가비지컬렉터 추가

--- a/용어정리2.md
+++ b/용어정리2.md
@@ -13,13 +13,15 @@
 background 에서 데몬 쓰레드로 돌아가면서 접근 불가능한, 즉 주소를 알고있는 식별자가 없는 상태가 된 객체를 정리
 mark-and-sweep’알고리즘: 전체루트를 쭉 내려가면서 객체들에 mark한다. 한바퀴돌았는데 mark되지않은건 sweep한다
 깊게들어가면 generational(영올드)incremental(나눠서) idle-time(프로그램유휴상태일때)
-
+모던자바스크립트엔진들에선 더 발전된형태의 가비지컬렉터사용
 # 언매니지드 매니지드
+매모리 관리방식에따라 나눠짐
 
 # 표현식과 값
-
-# 선언과 정의
-
+값으로 평가될수 있 모든 문(statement). 표현식이 평가되면 새로운값을 생성하거나 기존값을 참조한다.
+# 선언과 정의 Declaration and Definition
+선언은 그 선언한것에 들어갈 값에대한 메모리생성하지않음(선언자체의 메모리는있다)
+정의는 선언한것에 값을 넣어서 메모리에 할당됨
 # null타입 사용
 
 # 변수의 스코프
