--- a/용어정리2.md
+++ b/용어정리2.md
@@ -22,8 +22,13 @@ mark-and-sweep’알고리즘: 전체루트를 쭉 내려가면서 객체들에 
 # 선언과 정의 Declaration and Definition
 선언은 그 선언한것에 들어갈 값에대한 메모리생성하지않음(선언자체의 메모리는있다)
 정의는 선언한것에 값을 넣어서 메모리에 할당됨
+컴파일러라면 선언전에 정의가되어있어야함.
+인터프리터는..동시에가능한듯?
 # null타입 사용
-
+해당 변수의 없음을 나타내는 값(?), 전역식별자가 아님
+즉 변수가 어떤 객체도 가르키고 있지않음.
+undefined가 변수를 선언만해도 할당되지만, null은 자동할당이안된다..
+값을 반환하지않는함수와 값은반환하지만 없는값을표현하는함수 구분가능
 # 변수의 스코프
 
 # 전역변수 문제점
