변수의 스코프(범위)

--- a/용어정리2.md
+++ b/용어정리2.md
@@ -30,7 +30,10 @@ mark-and-sweep’알고리즘: 전체루트를 쭉 내려가면서 객체들에 
 undefined가 변수를 선언만해도 할당되지만, null은 자동할당이안된다..
 값을 반환하지않는함수와 값은반환하지만 없는값을표현하는함수 구분가능
 # 변수의 스코프
-
+변수가 영향을 미치는 유효범위, 코드가 유효한범위
+블록스코프var:중괄호{}
+함수스코프let const:function 내부의 {}
+코드가 컴파일될때 RHS, LHS로 스코프를 구분하고 해당하는 변수목록을 작성함.
 # 전역변수 문제점
 
 # 단축평가
