함수리터럴

--- a/함수.md
+++ b/함수.md
@@ -12,4 +12,21 @@ add(2,5); //7
 - 함수정의 function definition 를 통해 생성하며 다양한 방법이 있음
 - 함수호출 function call/invoke 로 호출하여 실행을 명시적으로 지시해야함
 
-# 함수사용 이유
+## 함수사용 이유
+- 코드의 재사용 및 유지보수 편의성, 신뢰성 향상
+- 함수는 객체타입 값 -> 식별자를 붙일 수 있음(가독성)
+
+## 함수 리터럴
+- 함수도 객체타입 값이므로 함수리터럴로 생성가능
+- function 키워드, 함수이름, 매개변수목록, 함수몸체 로 구성
+### 함수이름
+- 함수 이름은 식별자, 네이밍규칙준수
+- 함수 몸체 내에서만 참조할 수 있는 식별자
+- 이름은 생략가능, 이름이있으면 기명함수 named function, 없으면 익명/무명함수 anonymous function
+### 매개변수 목록
+- 0개이상의 매개변수를 소괄호로 감싸고 쉼표로 구분
+- 함수 호출시 각 매개변수에는 지정인수가 순서대로 할당-> 매개변수 목록의 순서는 의미있음
+- 매개변수는 몸체내에서 변수와 동일하게 취급 -> 매개변수도 식별자 네이밍규칙 준수
+### 함수몸체
+- 함수호출시 일괄적으로 실행될 문들을 하나의 실행단위로 정의한 코드블록
+- 함수 호출에의해 실행
