함수선언문

--- a/함수.md
+++ b/함수.md
@@ -30,3 +30,34 @@ add(2,5); //7
 ### 함수몸체
 - 함수호출시 일괄적으로 실행될 문들을 하나의 실행단위로 정의한 코드블록
 - 함수 호출에의해 실행
+```
+변수에 함수 리터럴 할당
+var f = function add(x,y) {
+    return x+y;
+}
+```
+- 함수는 일반객체와다르게 **호출할 수 있다** 그리고 고유한 프로퍼티를 갖는다
+
+## 함수 정의
+- 함수를 호출하기 전 인수를 전달받을 매개변수,실행문,반환값을 지정하는것
+- 정의된 함수는 자바스크립트 엔진에의해 평가되어 함수객체가된다
+### 함수선언문 function declaration/statement
+```
+function add(x, y) {
+  return x + y;
+}
+```
+### 함수 표현식 function expression
+```
+var add = function (x, y) {
+  return x + y;
+};
+```
+### Function 생성자함수 function constructor
+```
+var add = new Function('x', 'y', 'return x + y');
+```
+### 화살표함수 arrow function -> ES6
+```
+var add = (x, y) => x + y;
+```
