--- a/함수.md
+++ b/함수.md
@@ -61,3 +61,47 @@ var add = new Function('x', 'y', 'return x + y');
 ```
 var add = (x, y) => x + y;
 ```
+```
+선언과 정의 Declaration and Definition
+선언은 그 선언한것에 들어갈 값에대한 메모리생성하지않음(선언자체의 메모리는있다)
+정의는 선언한것에 값을 넣어서 메모리에 할당됨
+
+변수는 선언/ 함수는 정의 임을 기억하자
+```
+
+## 함수선언문 사용
+- 함수선언문은 함수리터럴과 형태가 동일하지만 함수리터럴은 함수이름생략가능/ 함수선언문은 함수이름 생략불가능
+- 함수선언문은 표현식이 아닌 문-> 크롬에서 선언문실행하면 undefined 출력된다(만약 표현식인문이라면 생성된함수가 출력되는게정상)
+- 하지만 상황에 따라 자바스크립트엔진이 기명함수 리터럴과 함수선언문을 스스로 판단하여 실행시키기도한다
+- 함수 선언문으로 정의된 함수는 자바스크립트엔진은 함수선언문을 해석해 함수객체를 생성-> 이때 함수이름과 동일한이름의 식별자를 암묵적으로 생성하여 거기에 함수객체를 할당한다.(함수리터럴은 아님을 주의)
+```
+함수 선언문
+function add(x, y) {
+  return x + y;
+}
+
+함수 참조
+console.dir은 console.log와는 달리 함수 객체의 프로퍼티까지 출력한다.
+단, Node.js 환경에서는 console.log와 같은 결과가 출력된다.
+console.dir(add); // ƒ add(x, y)
+
+함수 호출
+console.log(add(2, 5)); // 7
+```
+
+## 함수 표현식
+- 함수=객체-값처럼 변수,프로퍼티,배열의 요소가될수있음= 일급객체다 first-class object
+- So 함수리터럴로 생성한 함수객체를 변수에 할당하면? 함수표현식 이라함
+- 함수 표현식의 함수리터럴은 함수이름을 생략하는것이 일반적(익명함수)
+```
+// 함수 표현식
+var add = function (x, y) {  -< function plus(x,y)가 아니다 생략했다
+  return x + y;
+};
+
+console.log(add(2, 5)); // 7
+```
+### 함수선언문은 표현식이아닌문/ 함수표현식은 표현식인문 임을 기억하자
+
+## 함수생성시점과 함수 호이스팅
+- 
