--- a/함수.md
+++ b/함수.md
@@ -104,4 +104,12 @@ console.log(add(2, 5)); // 7
 ### 함수선언문은 표현식이아닌문/ 함수표현식은 표현식인문 임을 기억하자
 
 ## 함수생성시점과 함수 호이스팅
-- 
+- 함수 표현식으로 정의한함수는 호이스팅 X
+- 함수 선언문으로 정의한 함수는 호이스팅 O
+- 함수선언문과 변수선언문은 호이스팅은 다르다
+    - 변수호이스팅은 undefined로 초기화되고 함수호이스팅은 함수객체로 초기화된다-> 즉 선언문 이전에 변수를 참조하면 undefined로 평가되지만 함수를 참조하면 함수호출이 가능하다
+- 함수표현식의 호이스팅은 또 다르다
+    - 함수표현식은 변수할당문과 변수선언문을 동시에 동작하는것과같아서 변수 호이스팅처럼 동작한다. 즉 함수표현식 이전에 함수참조하면 undefined 평가된다.
+- 그래서 결론은 함수선언문은 호이스팅의규칙을 어지럽히므로 사용을 지양/ 함수표현식을 사용하는것이 변수선언문과 똑같이 즉 일관성있게 작동하고 좋음
+
+
