Function 생성자함수

--- a/함수.md
+++ b/함수.md
@@ -112,4 +112,18 @@ console.log(add(2, 5)); // 7
     - 함수표현식은 변수할당문과 변수선언문을 동시에 동작하는것과같아서 변수 호이스팅처럼 동작한다. 즉 함수표현식 이전에 함수참조하면 undefined 평가된다.
 - 그래서 결론은 함수선언문은 호이스팅의규칙을 어지럽히므로 사용을 지양/ 함수표현식을 사용하는것이 변수선언문과 똑같이 즉 일관성있게 작동하고 좋음
 
+## Function 생성자 함수
+- 자바스크립트 내장함수, 여기에 매개변수목록과 함수몸체를 문자열로 전달하면서 new연산자와함께 호출하면 함수객체를 생성해서 반환(new 연산자 없어도 결과는 동일)
+```
+생성자함수 constructor function
+객체를 생성하는 함수, 생성방식은 객체리터럴 외 다양한 방법이있음 이후에 더 자세히공부
+```
+```
+add함수만들기
+var add = new Function('x', 'y', 'return x + y');
 
+console.log(add(2, 5)); // 7
+```
+- 생성자함수로 함수를 생성하는것은 좋지않고 함수선언문이나 함수표현식으로 생성한 함수와는 평가결과가 다르다(참조오류가뜬다)
+
+##
