화살표함수

--- a/함수.md
+++ b/함수.md
@@ -126,4 +126,13 @@ console.log(add(2, 5)); // 7
 ```
 - 생성자함수로 함수를 생성하는것은 좋지않고 함수선언문이나 함수표현식으로 생성한 함수와는 평가결과가 다르다(참조오류가뜬다)
 
+## 화살표함수
+- ES6 에서 도입, function키워드대신 화살표 =>(fat arrow)를 사용(항상 익명함수로 정의)
+- 화살표함수는 생성자함수로 사용불가능
+```
+화살표 함수
+const add = (x, y) => x + y;
+console.log(add(2, 5)); // 7
+```
+
 ##
