매개변수와 인수

--- a/함수.md
+++ b/함수.md
@@ -135,4 +135,30 @@ const add = (x, y) => x + y;
 console.log(add(2, 5)); // 7
 ```
 
-##
+## 함수 호출
+- 식별자 () 로 호출, 함수를 호출하면 현재 실행흐름 중단, 호출된 함수로 실행흐름 옮김
+### 매개변수와 인수
+- 필요한값을 외부에서 내부로 전달시 매개변수를 통해 인수를 전달(인수는 값으로 평가될수있는 표현식and 갯수와 타입에 제한없음)
+- 함수가 호출되면 암묵적으로 매개변수 생성되고 변수처럼 undefined로 초기화 된 후 인수가 순서대로 할당
+- 매개변수의 스코프는 함수내부
+- 매개변수와 인수의 갯수가 일치하지않아도 인수가 할당되지않은 매개변수는 undefined로 할당되고 오류뜨지않음
+- 인수가 초과되면 암묵적으로 arguments 객체의 프로퍼티로 보관됨
+### 인수확인
+- 자바스크립트는 동적언어-> 매개변수의 타입을 사전정의 불가
+- 확인하려면 런타임에서 알수있으므로 이를 보완하는것이 타입스크립트(정적타입언어의 성질가짐)
+- arguments 객체를 통해 인수개수를 확인가능, 단축평가로 기본값도할당가능
+```
+function add(a, b, c) {
+  a = a || 0;
+  b = b || 0;
+  c = c || 0;
+  return a + b + c;
+}
+
+console.log(add(1, 2, 3)); // 6
+console.log(add(1, 2)); // 3
+console.log(add(1)); // 1
+console.log(add()); // 0
+```
+### 매개변수의 개수
+- 클린한코드를위해선 매개변수는 적을수록, 가급적 3개이하로 하는것이 좋다( 함수가 한가지일만 하는것이 좋은코드다)
