--- a/함수.md
+++ b/함수.md
@@ -162,3 +162,12 @@ console.log(add()); // 0
 ```
 ### 매개변수의 개수
 - 클린한코드를위해선 매개변수는 적을수록, 가급적 3개이하로 하는것이 좋다( 함수가 한가지일만 하는것이 좋은코드다)
+---
+
+## 반환문
+- return 키워드와 표현식(반환값)으로 이뤄진 반환문을 통해 실행결과를 외부로 반환
+- 반환문 : 함수실행중단하고 함수몸체 빠져나가기, return키워드 뒤의 표현식을 평가해 반환(표현식을 지정하지않으면 undefined)
+- 반환문은 생략가능하며 암묵적으로 undefined 반환
+- return 과 표현식사이 줄바꿈이있으면 ASI에 의해 표현식이 무시됨을 주의
+- Node.js는 파일별 독립적 파일스코프를 가지므로 가장 바깥영역에서 반환문사용해도 문법에러 발생하지않음
+
