함수의 참조에의한전달

--- a/함수.md
+++ b/함수.md
@@ -171,3 +171,8 @@ console.log(add()); // 0
 - return 과 표현식사이 줄바꿈이있으면 ASI에 의해 표현식이 무시됨을 주의
 - Node.js는 파일별 독립적 파일스코프를 가지므로 가장 바깥영역에서 반환문사용해도 문법에러 발생하지않음
 
+## 참조에 의한 전달과 외부상태의 변경
+- 매개변수도 함수몸체 내부에서 변수와 동일취급되므로 참조에의한 전달방식을 따름
+- 함수호출시 매개변수에 값을 전달하는 방식을 값에의한호출,참조에의한호출로 구분하기도하지만 동작방식은 동일하다
+- 즉 참조에의한호출은 다양한 부수효과를 가져오기떄문에 매개변수로 원시타입변수의 전달은 좋지만, 참조타입변수는 매우 불안정하다
+- 순수함수란 이런 부수효과없이 외부의 상태를 변경하지않고 외부의상태에 영향도 받지않는 함수이다
