즉시실행함수

--- a/함수.md
+++ b/함수.md
@@ -176,3 +176,25 @@ console.log(add()); // 0
 - 함수호출시 매개변수에 값을 전달하는 방식을 값에의한호출,참조에의한호출로 구분하기도하지만 동작방식은 동일하다
 - 즉 참조에의한호출은 다양한 부수효과를 가져오기떄문에 매개변수로 원시타입변수의 전달은 좋지만, 참조타입변수는 매우 불안정하다
 - 순수함수란 이런 부수효과없이 외부의 상태를 변경하지않고 외부의상태에 영향도 받지않는 함수이다
+
+## 다양한 함수형태
+### 즉시실행함수
+- 함수 정의와 동시에 즉시호출되는함수 (IIFE, Immediately Invoked Function Expression)/ 단 한번만 호출되며 다시호출 불가능(익명함수를 사용하는것이 일반적)
+- 오류를 방지하기위해 즉시실행함수는 반드시 그룹연산자()로 감싸야한다
+```
+즉시 실행 함수도 일반 함수처럼 값을 반환할 수 있다.
+var res = (function () {
+  var a = 3;
+  var b = 5;
+  return a * b;
+}());
+
+console.log(res); // 15
+
+즉시 실행 함수에도 일반 함수처럼 인수를 전달할 수 있다.
+res = (function (a, b) {
+  return a * b;
+}(3, 5));
+
+console.log(res); // 15
+```
