--- a/함수.md
+++ b/함수.md
@@ -198,3 +198,73 @@ res = (function (a, b) {
 
 console.log(res); // 15
 ```
+### 재귀함수
+- 재귀호출 recursive call 자신을 호출함-> 반복처리
+- 무한루프 빠질수있으므로 되도록이면 반복문을 사용
+```
+팩토리얼 재귀함수(1부터 자신까지의 모든 양의 정수의 곱)
+// n! = 1 * 2 * ... * (n-1) * n
+function factorial(n) {
+  // 탈출 조건: n이 1 이하일 때 재귀 호출을 멈춘다.
+  if (n <= 1) return 1;
+  // 재귀 호출
+  return n * factorial(n - 1);
+}
+console.log(factorial(3)); // 3! = 3 * 2 * 1 = 6
+console.log(factorial(4)); // 4! = 4 * 3 * 1 * 1 = 24
+console.log(factorial(5)); // 5! = 5 * 4 * 3 * 2 * 1 = 120
+```
+### 중첩함수 nested function/ 내부함수 inner function
+- 함수의 내부에 정의된함수(중첩함수를 포함하는함수는 외부함수 outer function) / 일반적으로 중첩함수는 외부함수를돕는 헬퍼함수(helper function)의 역할을 함
+- ES6 부터는 문이 위치할수 있는 문맥이라면 어디든지 가능(if,for문의 코드블록 내에서도 가능하다 but 호이스팅으로 혼란발생...)
+### 콜백함수
+- 콜백함수 callback function : 함수의 매개변수를 통해 다른 함수의 내부로 전달되는 함수
+- 고차함수 Higher-Order Finction, HOF : 매개변수를 통해 함수의 외부에서 콜백함수를 전달받은함수 
+- 즉 콜백함수는 고차함수에 일부분으로 들어가서 헬퍼함수역할을 함(중첩함수는 고정되어있어 교체가 힘들지만, 콜백함수는 외부에서 고차함수 내부로 합성되므로 자유롭게 교체할수있다는 장점)
+- 비동기처리 및 배열 고차함수에도 사용
+```
+// 콜백 함수를 사용하는 고차 함수 map
+var res = [1, 2, 3].map(function (item) {
+  return item * 2;
+});
+
+console.log(res); // [2, 4, 6]
+
+// 콜백 함수를 사용하는 고차 함수 filter
+res = [1, 2, 3].filter(function (item) {
+  return item % 2;
+});
+
+console.log(res); // [1, 3]
+
+// 콜백 함수를 사용하는 고차 함수 reduce
+res = [1, 2, 3].reduce(function (acc, cur) {
+  return acc + cur;
+}, 0);
+
+console.log(res); // 6
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
