순수함수 비순수함수

--- a/함수.md
+++ b/함수.md
@@ -244,8 +244,9 @@ res = [1, 2, 3].reduce(function (acc, cur) {
 
 console.log(res); // 6
 ```
-
-
+### 순수함수와 비순수함수
+- 순수함수 pure function : 외부상태 의존 X 변경 X
+- 비순수함수 impure function : 외부상태 의존, 외부상태 변경(부수효과 on)
 
 
 
