--- a/스코프.md
+++ b/스코프.md
@@ -1,1 +1,9 @@
 # 스코프 scope
+- 유효범위, 자바스크립트는 다른 언어의 스코프와 다른 특징이 있음
+- 모든 식별자(변수,함수이름,클래스이름...)는 선언된 위치에의해 스코프가 결정
+- 자바스크립트엔진은 식별자결정 identifier resolution 과정을 스코프를 보고 판단
+## 코드의 문맥 context와 환경 environment
+- 렉시컬환경 lexcical environment : 코드가 어디서실행되며 주변에 어떤코드가있는지
+- 코드의 문맥 context 은 렉시컬 환경으로 이뤄짐
+- 이것을 구현한것이 "실행 컨텍스트 execution context"
+- 스코프를 통해 식별자(변수이름)의 충돌을 방지할수있다. 즉 같은이름의 식별자를 각각 다른 스코프에서는 사용할수있다. 스코프=네임스페이스(하지만 var키워드는 같은스코프 내 변수를 재할당하여 중복선언->부작용)
