함수레벨 스코프

--- a/스코프.md
+++ b/스코프.md
@@ -23,3 +23,8 @@
 - 변수 선언이 실행되면 변수 식별자가 스코프체인구조(렉시컬환경들이 연결된구조)에 key로등록되어 변수할당이 일어나면 이 구조의 변수 식별자에 해당하는값을 변경
 
 ## 함수 레벨 스코프
+- 대부분의 프로그래밍언어는 함수몸체뿐 아니라 모든 코드블록이 지역스코프생성 - > 블록 레벨 스코프 block level scope
+- var 키워드로 선언된 변수는 함수의 코드블록만을 지역스코프로 인정 -> 함수 레벨 스코프 function level scope ( 즉 자바스크립트에서는 var키워드로 선언된 변수가 내외부의 블록레벨 스코프를 무시하는경우 생김)
+- 이 문제를 해결하기위해 ES6 에 추가된 let,const 키워드는 블록레벨 스코프를 생성
+
+-
