렉시컬스코프

--- a/스코프.md
+++ b/스코프.md
@@ -27,4 +27,7 @@
 - var 키워드로 선언된 변수는 함수의 코드블록만을 지역스코프로 인정 -> 함수 레벨 스코프 function level scope ( 즉 자바스크립트에서는 var키워드로 선언된 변수가 내외부의 블록레벨 스코프를 무시하는경우 생김)
 - 이 문제를 해결하기위해 ES6 에 추가된 let,const 키워드는 블록레벨 스코프를 생성
 
--
+## 렉시컬 스코프
+- 동적스코프 dynamic scope : 함수를 어디서 호출했는지에 따라 상위스코프 결정
+- 렉시컬스코프 lexical scope / 정적스코프 static scope : 함수를 어디서 정의했는지에 따라 상위스코프 결정
+- 자바스크립트는 렉시컬스코프
