변수의 생명주기 내용추가

--- a/전역변수의 문제점.md
+++ b/전역변수의 문제점.md
@@ -1,1 +1,24 @@
 # 변수의 생명주기
+## 지역변수의 생명주기
+- 전역변수의 생명은 애플리케이션의 생명과 같음/ 지역변수의 생명주기는 함수를 호출하면 생성, 함수가 종료하면 소멸
+```
+function foo() {
+  var x = 'local';
+  console.log(x); // local
+  return x;
+}
+
+foo();
+console.log(x); // ReferenceError: x is not defined
+```
+- 즉 생명주기는 메모리공간이 확보(allocate)->메모리공간해제(release)->가용메모리풀(memory pool)에 반환 까지의 시점이다
+
+- 일반적으로 함수가종료하면 스코프도 소멸하지만, 다른곳에서 해당 스코프를 참조하고있다면, 해제되지않고 생존한다
+## 전역변수 생명주기
+- 전역변수의 생명주기는 전역 객체의 생명주기와 일치
+```
+전역 객체(global object)
+전역 객체는 코드가 실행되기 이전 단계에 자바스크립트 엔진에 의해 어떤 객체보다도 먼저 생성되는 특수한 객체다. 전역 객체는 클라이언트 사이드 환경(브라우저)에서는 window, 서버 사이드 환경(Node.js)에서는 global 객체를 의미한다. 환경에 따라 전역 객체를 가리키는 다양한 식별자(window, self, this, frames, global)가 존재했으나 ES11(ECMAScript 11)에서 globalThis로 통일되었다.
+전역 객체에는 표준 빌트인 객체(Object, String, Number, Function, Array…)와 환경에 따른 호스트 객체(클라이언트 Web API 또는 Node.js의 호스트 API), 그리고 var 키워드로 선언한 전역 변수와 전역 함수를 프로퍼티로 갖는다.
+전역 객체와 표준 빌트인 객체에 대해서는 “21. 빌트인 객체”에서 자세히 살펴보자.
+```
