타입변환및 객체,프로퍼티 내용추가

--- a/용어정리3.md
+++ b/용어정리3.md
@@ -1,24 +1,44 @@
-- 암묵적 타입 변환 vs 명시적 타입 변환  
-- 객체 리터럴 
-- 객체 리터럴에 의한 객체 생성 
-	—> 자바스크립트는 프로토타입 기반 객체지향 언어로써 클래스 기반 객체 지향 언어와는 달리 다양한 객체 생성 방법을 지원한다; 
-객체 리터럴
-Object 생성자 함수
-생성자 함수
-Object.create 메서드
-클래스 (ES6)
-	(cf. 객체를 생성하는 3가지 방법; 문자열 생성, 숫자 -> 문자열, 불리언이 아닌 것 -> 불리언)
-- 프로퍼티 (cf. 프로퍼티 키 & 프로퍼티 값)
-- 메서드 
-- 인스턴스 
-- 프로퍼티 접근법 2가지; 
-마침표 표기법
-대괄호 표기법
-- 프로퍼티 값의 참조 (cf. 프로퍼티 참조가 없는데 그 아이(?)를 불러오려고 하면 undefined가 나온다)
-- 프로퍼티의 동적 생성/추가/삭제
-- 유사 배열 객체 
-- 프로퍼티 축약 표현 
-- 계산된 프로퍼티 이름 
-- 참조에 의한 전달 (cf. 참조값을 복사 - 얕은복사 vs 깊은 복사)
+# 암묵적 타입 변환 vs 명시적 타입 변환  
+- 명시적 타입변환 explicit coercion, 타입캐스팅 typecasting
+의도적으로 값의타입을 변환
+- 암묵적 타입변환 implicit coercion, 타입강제변환 type coercion
+자바스크립트 엔진에의해 자동변환
+- 기존 원시값을 직접 변경하는것이 아닌 새로운 원시값을 생성하는것이다.
+- 특히 암묵적 타입변환은 재할당이아닌 새로운 타입값을 만든후 사용후 바로 버린다.
+
+# 객체 리터럴에 의한 객체 생성 
+-자바스크립트는 프로토타입 기반 객체지향언어로 객체 생성방법이 다양하다.
+    - 객체 리터럴
+    - Object 생성자 함수
+    - 생성자 함수
+    - Object.create 메서드
+    - 클래스 (ES6)
+
+# 프로퍼티 (cf. 프로퍼티 키 & 프로퍼티 값)
+- key 와 value로 구성, 프로퍼티 나열시 쉼표로 구분
+    - key : 빈 문자열을 포함하는 모든 문자열 or 심벌 값(네이밍규칙 지키는게 best, 지키지않을시엔 ''로 묶어야해서 가독성,활용성 다 떨어짐)
+    - value : 자바스크립트에서 사용가능한 모든 값
+# 메서드 
+- 프로퍼티값이 함수일경우, 일반함수와 구분히기위해 method 라 부름(쉽게말해 객체안에 묶여있는함수는 method 다)
+- 객체안의 this 키워드는 객체자신을 가르키는 참조변수이다.(파이썬의 self느낌)
+# 인스턴스 
+
+# 프로퍼티 접근법 2가지; 
+
+# 마침표 표기법
+
+# 대괄호 표기법
+
+# 프로퍼티 값의 참조 (cf. 프로퍼티 참조가 없는데 그 아이(?)를 불러오려고 하면 undefined가 나온다)
+
+# 프로퍼티의 동적 생성/추가/삭제
+
+# 유사 배열 객체 
+
+# 프로퍼티 축약 표현 
+
+# 계산된 프로퍼티 이름 
+
+# 참조에 의한 전달 (cf. 참조값을 복사 - 얕은복사 vs 깊은 복사)
 	—> 자바스크립트에는 “참조에 의한 전달”은 존재하지 않고 “값에 의한 전달”만이 존재한다고 말할 수 있다
 	—> 공유에 의한 전달 (cf.
