메서드,인스턴스와 프로퍼티접근법

--- a/용어정리3.md
+++ b/용어정리3.md
@@ -22,12 +22,13 @@
 - 프로퍼티값이 함수일경우, 일반함수와 구분히기위해 method 라 부름(쉽게말해 객체안에 묶여있는함수는 method 다)
 - 객체안의 this 키워드는 객체자신을 가르키는 참조변수이다.(파이썬의 self느낌)
 # 인스턴스 
+- 객체지향언어에서 흔히 사용되는 클래스(Class)가 자바스크립트에서는 프로토타입(prototype)이며 생성자 함수가 사용된다. 다시 말하면 클래스나 프로토타입을 사용하여 만들어 낸 것이 인스턴스
 
 # 프로퍼티 접근법 2가지; 
-
-# 마침표 표기법
-
-# 대괄호 표기법
+- 마침표 표기법 dot notation : 마침표 프로퍼티 접근연산자 . 사용
+- 대괄호 표기법 bracket notation : 대괄호 프로퍼티 접근연산자 [...] 사용
+- key 가 네이밍규칙을 준수한다면, 두가지 모두 가능/ 비준수시 대괄호만 가능
+- key 가 숫자로만 이뤄진 문자열이라면 []안의 따옴표 생략 가능
 
 # 프로퍼티 값의 참조 (cf. 프로퍼티 참조가 없는데 그 아이(?)를 불러오려고 하면 undefined가 나온다)
 
