--- a/용어정리3.md
+++ b/용어정리3.md
@@ -22,6 +22,7 @@
 - 프로퍼티값이 함수일경우, 일반함수와 구분히기위해 method 라 부름(쉽게말해 객체안에 묶여있는함수는 method 다)
 - 객체안의 this 키워드는 객체자신을 가르키는 참조변수이다.(파이썬의 self느낌)
 # 인스턴스 
+-인스턴스란 클래스에 의해 생성되어 메모리에 저장된 실체를 말한다. 객체지향 프로그래밍에서 객체는 클래스와 인스턴스를 포함한 개념이다. 클래스는 인스턴스를 생성하기 위한 템플릿의 역할을 한다. 인스턴스는 객체가 메모리에 저장되어 실제로 존재하는 것에 초점을 맞춘 용어
 - 객체지향언어에서 흔히 사용되는 클래스(Class)가 자바스크립트에서는 프로토타입(prototype)이며 생성자 함수가 사용된다. 다시 말하면 클래스나 프로토타입을 사용하여 만들어 낸 것이 인스턴스
 
 # 프로퍼티 접근법 2가지; 
@@ -29,17 +30,19 @@
 - 대괄호 표기법 bracket notation : 대괄호 프로퍼티 접근연산자 [...] 사용
 - key 가 네이밍규칙을 준수한다면, 두가지 모두 가능/ 비준수시 대괄호만 가능
 - key 가 숫자로만 이뤄진 문자열이라면 []안의 따옴표 생략 가능
-
-# 프로퍼티 값의 참조 (cf. 프로퍼티 참조가 없는데 그 아이(?)를 불러오려고 하면 undefined가 나온다)
+- 존재하지않는 프로퍼티에 접근하면 undefined 반환(ReferenceError 발생하지않음)
 
 # 프로퍼티의 동적 생성/추가/삭제
-
+- 존재하지않는 프로퍼티에 값을 추가하면 동적으로 생성되고 안에 값이 할당됨 거기에 재할당시 변경,추가 됨
+- delete 연산자는 객체의 프로퍼티를 삭제한다. 이때 delete 연산자의 피연산자는 프로퍼티 값에 접근할 수 있는 표현식이어야 한다
 # 유사 배열 객체 
-
+문자열은 유사 배열 객체이면서 이터러블이므로 배열과 유사하게 각 문자에 접근할 수 있다.
+유사 배열 객체란 마치 배열처럼 인덱스로 프로퍼티 값에 접근할 수 있고 length 프로퍼티를 갖는 객체를 말한다. 문자열은 마치 배열처럼 인덱스를 통해 각 문자에 접근할 수 있으며, length 프로퍼티를 갖기 때문에 유사 배열 객체이고 for 문으로 순회할 수도 있다.
+갑자기 원시값인 문자열이 객체일 수도 있다니 혼란스러울 수 있겠다. 아직 살펴보지 않았지만 원시값을 객체처럼 사용하면 원시값을 감싸는 래퍼 객체로 자동 변환된다
 # 프로퍼티 축약 표현 
-
+ES6에서는 프로퍼티 값으로 변수를 사용하는 경우 변수 이름과 프로퍼티 키가 동일한 이름일 때, 프로퍼티 키를 생략(property shorthand)할 수 있다. 이때 프로퍼티 키는 변수 이름으로 자동 생성
 # 계산된 프로퍼티 이름 
-
+문자열 또는 문자열로 타입 변환할 수 있는 값으로 평가되는 표현식을 사용해 프로퍼티 키를 동적으로 생성할 수도 있다. 단, 프로퍼티 키로 사용할 표현식을 대괄호([…])로 묶어야 한다. 이를 계산된 프로퍼티 이름(computed property name)이라 한다.
 # 참조에 의한 전달 (cf. 참조값을 복사 - 얕은복사 vs 깊은 복사)
-	—> 자바스크립트에는 “참조에 의한 전달”은 존재하지 않고 “값에 의한 전달”만이 존재한다고 말할 수 있다
-	—> 공유에 의한 전달 (cf.
+객체를 가리키는 변수(원본, person)를 다른 변수(사본, copy)에 할당하면 원본의 참조값이 복사되어 전달된다. 이를 참조에 의한 전달(pass by reference)이라 한다.
+
