함수내용추가

--- a/함수.md
+++ b/함수.md
@@ -1,5 +1,9 @@
 # 함수 
 - input과 output 있는 상태로 파이썬의 함수와 비슷하다 생각하자.
+- 현업에선 함수만드는게 주 업무라고 할정도로 중요하다.
+- 함수내에 미지수 x,y가 있다는건 외부로부터 값을 받아야함을 뜻한다
+  - 이때 값을 받는것을 '호출'이라고 한다.(즉 함수가 호출되어진다)
+  - 브라우저가 호출할때를 "비동기" 라고 함
 ```
 function add(x,y){
     return x + y;
