--- a/배열.md
+++ b/배열.md
@@ -1,1 +1,48 @@
-# 배열이란
+# 배열 array
+- 여러개의 값을 순차적으로 나열한 자료구조
+    - 배열은 타입이아니다, 객체 타입 이다
+- 배열 내부의 값 : 요소 element (값으로 인정하는 모든것은 요소로 가능)
+    - element 는 자신의 배열내 위치를 나타내는 index 가짐
+    - index 는 element 에 접근할때 사용 , 0부터 시작
+- 배열은 length 프로퍼티(배열의 길이 나타냄) 가짐
+    - length 프로퍼티, index 를 활용하여 반복문으로 요소에 순차적접근 가능 한것이 가장큰 장점
+- 배열생성
+    - 배열리터럴
+    - Array 생성자함수
+    - Array.of , Array.from 메서드
+- 배열의 생성자함수는 Array
+- 배열의 프로토타입객체는 Array.prototype
+    - Array.prototype 은 배열을위한 빌트인 메서드 제공
+
+- 일반객체와 배열의 차이
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: left">구분</th>
+      <th style="text-align: center">객체</th>
+      <th style="text-align: center">배열</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: left">구조</td>
+      <td style="text-align: center">프로퍼티 키와 프로퍼티 값</td>
+      <td style="text-align: center">인덱스와 요소</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">값의 참조</td>
+      <td style="text-align: center">프로퍼티 키</td>
+      <td style="text-align: center">인덱스</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">값의 순서</td>
+      <td style="text-align: center">x</td>
+      <td style="text-align: center">○</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">length 프로퍼티</td>
+      <td style="text-align: center">x</td>
+      <td style="text-align: center">○</td>
+    </tr>
+  </tbody>
+</table>
