--- a/배열.md
+++ b/배열.md
@@ -46,3 +46,25 @@
     </tr>
   </tbody>
 </table>
+  
+---
+</br> 
+
+## 자바스크립트의 배열은 일반적인 배열과 다르다
+- 자료구조에서의 배열은 밀집배열(dense array)  
+동일한 크기의 메모리공간이 빈틈없이 연속적으로 나열된 구조. 배열의 요소는 하나의 데이터타입으로 통일, 연속적
+    - index를 통해 한번의 연산으로 요소에접근가능, O(1)
+    - 하지만 정렬되지않은 배열이면? 처음부터 linear serch 해야함 O(n)
+    - 요소 삽입,삭제도 연속성유지를 위해 요소를 이동시켜야함...bad
+- 자바스크립트에서의 배열은 희소배열 (saparse array)  
+각각의 메모리크기는 달라도되고 비연속적이여도 됨. 배열의 동작을 흉내낸 **특수한 객체**
+- 쉽게 이해하는 자바스크립트 배열구조?
+    - 배열의 인덱스를 나타내는 문자열 ('0', '1', '2' ...) : 프로퍼티 키
+    - 배열의 요소 : 프로퍼티 값(어떤값이라도 들어올수있음)
+    - length 프로퍼티 가짐
+    - 해시테이블 구조, 속도는 느리지만 요소 삽입,삭제가 편리하고 빠름
+    - 느린속도를 보완하기위해 모던자바스크립트 엔진들은 최적화시켜서 극복
+---
+</br>
+
+## length 프로퍼티와 희소배열
