희소배열 내용추가

--- a/배열.md
+++ b/배열.md
@@ -51,12 +51,12 @@
 </br> 
 
 ## 자바스크립트의 배열은 일반적인 배열과 다르다
-- 자료구조에서의 배열은 밀집배열(dense array)  
+- 자료구조에서의 배열은 ***밀집배열(dense array)***  
 동일한 크기의 메모리공간이 빈틈없이 연속적으로 나열된 구조. 배열의 요소는 하나의 데이터타입으로 통일, 연속적
     - index를 통해 한번의 연산으로 요소에접근가능, O(1)
     - 하지만 정렬되지않은 배열이면? 처음부터 linear serch 해야함 O(n)
     - 요소 삽입,삭제도 연속성유지를 위해 요소를 이동시켜야함...bad
-- 자바스크립트에서의 배열은 희소배열 (saparse array)  
+- 자바스크립트에서의 배열은 ***희소배열 (saparse array)***  
 각각의 메모리크기는 달라도되고 비연속적이여도 됨. 배열의 동작을 흉내낸 **특수한 객체**
 - 쉽게 이해하는 자바스크립트 배열구조?
     - 배열의 인덱스를 나타내는 문자열 ('0', '1', '2' ...) : 프로퍼티 키
@@ -68,3 +68,25 @@
 </br>
 
 ## length 프로퍼티와 희소배열
+- length 프로퍼티 : 요소의 갯수, 빈배열은 0, 빈배열 아니면 가장큰요소의 인덱스 +1 (0부터시작하기때문)
+- length 의 maximun은 2의32승
+- 요소 추가,삭제시 자동 갱신
+- 임의의 숫자값을 명시적으로 할당도 가능
+    - 프로퍼티보다 적은값을 할당하면 자동으로 줄어듬
+    - 프로퍼티보다 큰값을 할당하면 배열의 길이는 그대로, 프로퍼티 값은 변경(이때 빈자리는 메모리확보하지않고 그냥 비워두고 empty로 알려줌)
+```
+const arr = [1, 2, 3, 4, 5];
+
+// 현재 length 프로퍼티 값인 5보다 작은 숫자 값 3을 length 프로퍼티에 할당
+arr.length = 3;
+
+// 배열의 길이가 5에서 3으로 줄어든다.
+console.log(arr); // [1, 2, 3]
+
+// 더 많은수인 6을할당
+arr.length = 6;
+console.log(arr); // [1,2,3, <3 empty items> ]
+```
+- 결론은 배열의 요소가 비연속적이고 일부가 비어있다? = 희소배열  
+그래서 length와 배열요소의 개수가 불일치, 정확히는 length는 희소배열의 실제 요소개수보다 항상 크다
+    - 그래서 쓰지않을수록 좋다... 배열에는 같은타입요소를 연속위치하는게 best
