--- a/배열.md
+++ b/배열.md
@@ -90,3 +90,40 @@ console.log(arr); // [1,2,3, <3 empty items> ]
 - 결론은 배열의 요소가 비연속적이고 일부가 비어있다? = 희소배열  
 그래서 length와 배열요소의 개수가 불일치, 정확히는 length는 희소배열의 실제 요소개수보다 항상 크다
     - 그래서 쓰지않을수록 좋다... 배열에는 같은타입요소를 연속위치하는게 best
+---
+</br>
+
+## 배열생성
+---
+### 배열 리터럴
+- 가장 normal, easy
+- 0개 이상 요소를 쉼포로 구분, [] 묶음, 프로퍼티키 없고 값만있음
+    - const arr = [1,2,3];
+### Array 생성자함수
+- new 연산자 없어도 내부의 new.target이 확인되어 생성자함수로 동작함
+- 전달된 인수 갯수에따라 다르게 동작함을 주의
+    - 전달 1개 and 숫자 : 인수를 length프로퍼티값(내용은 비어있는 희소배열)
+    - 전달 X : 빈배열 [] 생성 (배열리터럴 []와 같음)
+    - 전달 2개이상 or 숫자가 아니면 : 인수를 요소로
+### Array.of
+- 인수를 요소로갖는 배열생성(ES6 에서 도입)
+    - 인수 갯수상관없음
+### Array.from
+- 유사배열객체 or 이터러블객체를 인수로 받아서 배열로 변환후 반환
+```
+// 유사 배열 객체를 변환하여 배열을 생성한다.
+Array.from({ length: 2, 0: 'a', 1: 'b' }); // -> ['a', 'b']
+
+// 이터러블을 변환하여 배열을 생성한다. 문자열은 이터러블이다.
+Array.from('Hello'); // -> ['H', 'e', 'l', 'l', 'o']
+```
+- 두번째 인수에 콜백함수 전달하면 파이썬의 map과 같은 효과로 배열생성
+```
+// Array.from에 length만 존재하는 유사 배열 객체를 전달하면 undefined를 요소로 채운다.
+Array.from({ length: 3 }); // -> [undefined, undefined, undefined]
+
+// Array.from은 두 번째 인수로 전달한 콜백 함수의 반환값으로 구성된 배열을 반환한다.
+Array.from({ length: 3 }, (_, i) => i); // -> [0, 1, 2]
+```
+- 이터러블객체  
+Symbol.iterator 메서드로 for..of문을 사용해 순회가능하며 스프레드문법과 배열디스트럭처링할당의 대상으로 사용가능한 객체 (아직은 무슨뜻인지모름)
