배열요소 내용추가

--- a/배열.md
+++ b/배열.md
@@ -127,3 +127,50 @@ Array.from({ length: 3 }, (_, i) => i); // -> [0, 1, 2]
 ```
 - 이터러블객체  
 Symbol.iterator 메서드로 for..of문을 사용해 순회가능하며 스프레드문법과 배열디스트럭처링할당의 대상으로 사용가능한 객체 (아직은 무슨뜻인지모름)
+
+## 배열요소의 참조
+- 배열요소 참조시 대괄호표기법[] 사용
+    - 대괄호 안에는 인덱스
+    - 정수로 평가되는 표현식이라면? 인덱스 대신사용 가능
+    - 인덱스는 객체의 프로퍼티와 같은역할(값을 참조할수있음)
+    - 존재하지않는 요소 접근? undefined
+
+## 배열요소의 추가와 갱신
+- 존재하지않는 인덱스를 사용, 값 할당하면 새로운 요소로 추가(length 프로퍼티 자동갱신)
+    - length 보다 큰인덱스로 요소추가? 희소배열 됨
+    - 기존 요소에 값 재할당하면 갱신
+    - 인덱스요소를 정수가 아닌걸로 추가? 요소생성이 아니고 프로퍼티생성됨(이떄 추가된 프로퍼티는 length값에 영향주지않음)
+```
+const arr = [];
+
+// 배열 요소의 추가
+arr[0] = 1;
+arr['1'] = 2;
+
+// 프로퍼티 추가
+arr['foo'] = 3;
+arr.bar = 4;
+arr[1.1] = 5;
+arr[-1] = 6;
+
+console.log(arr); // [1, 2, foo: 3, bar: 4, '1.1': 5, '-1': 6]
+
+// 프로퍼티는 length에 영향을 주지 않는다.
+console.log(arr.length); // 2
+```
+## 배열요소 삭제
+- 배열은 객체다, 요소삭제는 delete 연산자로 가능
+    - why? delete는 프로퍼티를 삭제하므로
+    - but delete 사용하면 일반 배열도 희소배열이 되버림 bad
+- So Array.prototype.splice 메서드 사용
+```
+const arr = [1, 2, 3];
+
+// Array.prototype.splice(삭제를 시작할 인덱스, 삭제할 요소 수)
+// arr[1]부터 1개의 요소를 제거
+arr.splice(1, 1);
+console.log(arr); // [1, 3]
+
+// length 프로퍼티가 자동 갱신된다.
+console.log(arr.length); // 2
+```
