--- a/배열.md
+++ b/배열.md
@@ -174,3 +174,90 @@ console.log(arr); // [1, 3]
 // length 프로퍼티가 자동 갱신된다.
 console.log(arr.length); // 2
 ```
+
+## 배열메서드
+- mutator method : 원본배열을 직접변경
+- accessor method : 원본을 복사한 새 배열을 생성하여 변경
+    - 부수효과를 피하기위해 accessor method가 좋음
+### Array.isArray
+- Array 생성자함수의 정적메서드(Array.of, Array.from 처럼)
+- 전달된 인수가 배열이면 true // 아니면 false
+### Array.prototype.indexOf
+- 원본배열에서 인수로 전달된 요소를 검색하여 인덱스 반환
+    - 전달된 요소가 중복되는 여러개? : 첫번쨰로 검색된거 반환
+    - 전달된 요소가 없어? : -1 반환
+- 배열에 특정 요소가 존재하는지 확인할때 유용
+    - ES7 도입된 Array.prototype.includes 메서드 사용이 better(찾아보기)
+### Array.prototype.push
+- 인수로 전달받은 모든값을 원본배열 마지막에 추가, 변경된 length 프로퍼티값 반환, 원본을 직접변경...부수효과 발생(한마디로 원본에 append해서 총길이 반환한다)
+- ES6 스프레드문법이 better , 35.스프레드에서보기
+### Array.prototype.pop
+- 배열원본의 마지막요소 뽑기해서 반환..부수효과(원본이 빈배열? undefined)
+    - 후입선출(LIFO) 방식의 stack 은 pop과 push로 쉽게 구현가능
+### Array.prototype.unshift
+- 전달받은 모든값을 원본배열의 선두에 추가, length 프로퍼티값 반환
+    - 이것도 역시 부수효과떄문에 스프레드문법사용이 better
+### Array.prototype.shift
+- 원본배열의 첫번째 요소 제거, 제거한요소 반환(원본이 빈배열? undefined)
+    - 선입선출(FIFO) 방식의 queue 는 shift와 push로 구현가능
+### Array.prototype.concat
+- 전달받은 값들을 원본배열을 복사한 새로운 배열에 마지막요소로 추가후 반환
+    - 인수가 배열이면? 해체해서 원본배열에 요소로 추가  
+```
+차이를 잘 알아두자
+push,unshift는 원본배열을 변경하므로 원본을 변수에 저장해야함  
+그리고 배열을 인자로받으면 그냥 배열덩어리를 요소로 추가
+
+concat은 반환값을 변수에 할당받아야함
+배열을 인자로받으면 분해해서 요소로추가
+
+하지만 결론은 push,unshift,concat 대신 ES6 스프레드 문법 써라
+```
+### Array.prototype.splice
+- 원본을 직접변경, 배열의 중간에 요소 추가,제거 후 제거한 요소를 반환
+- 매개변수 3개
+    - start : start부터 모든요소를 제거하기 시작하는 인덱스(음수면 뒤에서부터)
+    - deleteCount : start부터 제거할 요소의 갯수(옵션, 0이면 안지움)
+    - items : 제거한 위치에 삽입할 요소들(옵션)
+- indexOf 메서드로 요소의 인덱스를 파악한뒤, splice메서드 사용하면 배열내의 특정 요소를 제거할수 있음
+- filter 메서드도 특정요소를 제거가능, but 특정요소가 중복되면 전부다지움
+### Array.prototype.slice
+- 인수로 전달된 범위의 요소들을 복사해서 배열로 반환
+- 매개변수 2개
+    - start : 복사를 시작할 인덱스 ( 음수면 뒤에서부터)
+    - end : 복사를 종료할 인덱스 (생략가능/ 생략하면 끝가지지움, 이 인덱스에 해당하는값은 안지움 // start=1 end=3 이면 1,2까지만 지운다)
+    - start,end 다없다? 그냥 통쨰로 복사해서 반환( 얕은 복사 )
+    - 이걸 응용해서 arguments, NodeList 같은 유사배열객체를 배열로 변환
+### Array.prototype.join
+- 원본배열의 모든요로를 문자열로 변환, 인수로 받은 문자열(구분자)로 연결한 문자 반환
+    - 구분자는 생략가능, default = , 콤마
+    - 쉽게이해하자 1234 넣으면 1,2,3,4 나온다
+### Array.prototype.reverse
+- 원본배열 순서반대로 뒤집기, 원본을 변경해서 반환
+### Array.prototype.fill
+- ES6 인수로 전달받은값으로 배열의 처음부터 끝까지 다 채움(원본을)
+    - 두번째 인수로 start지점 선택가능
+    - 세번째 인수로 end 지점 선택가능(end처럼 end인덱스전까지 실행)
+    - 하나의 인수로만 바꿀수있음,,,from메서드에 콜백함수넣어서쓰는게 better
+### Array.prototype.includes
+- ES7 배열내 특정요소 있으면 ture, 아니면 false
+    - 첫번째 인수로 검색할요소
+    - 두번째 인수로 start지점(생략시 0, 음수? length+음수 지점서 시작)
+- indexOf메서드도 가능하지만, 반환값이 -1인지 확인해야되고 NaN의 존재여부는 확인불가능
+### Array.prototype.flat
+- ES10 인수의 깊이만큼 재귀적으로 배열을 평탄화
+    - 무슨소리냐? 최상위스코프 아래부터 차례대로 벗긴다고 생각
+- 중첩배열을 평탄화할 깊이를 인수로 전달가능, 기본값 1, Infinity 주면 중첩배열 전부 평탄화
+```
+// 중첩 배열을 평탄화하기 위한 깊이 값의 기본값은 1이다.
+[1, [2, [3, [4]]]].flat();  // -> [1, 2, [3, [4]]]
+[1, [2, [3, [4]]]].flat(1); // -> [1, 2, [3, [4]]]
+
+// 중첩 배열을 평탄화하기 위한 깊이 값을 2로 지정하여 2단계 깊이까지 평탄화한다.
+[1, [2, [3, [4]]]].flat(2); // -> [1, 2, 3, [4]]
+// 2번 평탄화한 것과 동일하다.
+[1, [2, [3, [4]]]].flat().flat(); // -> [1, 2, 3, [4]]
+
+// 중첩 배열을 평탄화하기 위한 깊이 값을 Infinity로 지정하여 중첩 배열 모두를 평탄화한다.
+[1, [2, [3, [4]]]].flat(Infinity); // -> [1, 2, 3, 4]
+```
