--- a/배열.md
+++ b/배열.md
@@ -261,3 +261,206 @@ concat은 반환값을 변수에 할당받아야함
 // 중첩 배열을 평탄화하기 위한 깊이 값을 Infinity로 지정하여 중첩 배열 모두를 평탄화한다.
 [1, [2, [3, [4]]]].flat(Infinity); // -> [1, 2, 3, 4]
 ```
+
+## 배열 고차함수
+- 고차함수 : '함수를 인자로받거나 함수를 반환하는' 함수
+    - 불변성 immutablility 지향하는 함수형 프로그래밍에 기반
+    - 함수형 프로그래밍 ? 순수함수를 통해 부수효과를 최대한억제하는것
+
+### Array.prototype.sort
+- 원본의 요소를 집접 정렬시켜 정렬된 배열반환(timesort 알고리즘 사용)
+    - 오름차순
+    - 정렬된 배열.reverse()로 내림차순
+    - 문자열 타입으로 임시 변환 후 유니코드 기반(숫자라도)
+    - So 문자열 '10'은 유니코드 번호가 다른숫자들보다 빨라서 오류생김
+    - 이걸 방지하기위해 숫자요소 정렬시 정렬 순서를 정의하는 비교함수를 인수로 전달 해야함(비교함수가 음수->첫번째먼저, 비교함수가 양수->두번째 먼저 정렬)
+```
+const points = [40, 100, 1, 5, 2, 25, 10];
+
+// 여기서 화살표함수가 비교함수역할
+// 숫자 배열의 오름차순 정렬 
+points.sort((a, b) => a - b); // a-b가 음수네? 그럼 첫번쨰 1먼저 
+console.log(points); // [1, 2, 5, 10, 25, 40, 100]
+
+// 숫자 배열의 내림차순 정렬
+points.sort((a, b) => b - a); 
+console.log(points); // [100, 40, 25, 10, 5, 2, 1]
+```
+- 객체를 요소로갖는 배열 정렬법
+    - 여기서는 비교함수를 산술이아닌 비교연산 임을 주의
+```
+const todos = [
+  { id: 4, content: 'JavaScript' },
+  { id: 1, content: 'HTML' },
+  { id: 2, content: 'CSS' }
+];
+
+// 비교 함수. 매개변수 key는 프로퍼티 키다.
+function compare(key) {
+  // 프로퍼티 값이 문자열인 경우 - 산술 연산으로 비교하면 NaN이 나오므로 비교 연산을 사용한다.
+  // 비교 함수는 양수/음수/0을 반환하면 되므로 - 산술 연산 대신 비교 연산을 사용할 수 있다.
+  return (a, b) => (a[key] > b[key] ? 1 : (a[key] < b[key] ? -1 : 0));
+}
+
+// id를 기준으로 오름차순 정렬
+todos.sort(compare('id'));
+console.log(todos);
+/*
+[
+  { id: 1, content: 'HTML' },
+  { id: 2, content: 'CSS' },
+  { id: 4, content: 'JavaScript' }
+]
+*/
+
+// content를 기준으로 오름차순 정렬
+todos.sort(compare('content'));
+console.log(todos);
+/*
+[
+  { id: 2, content: 'CSS' },
+  { id: 1, content: 'HTML' },
+  { id: 4, content: 'JavaScript' }
+]
+*/
+```
+### Array.prototype.forEach
+- 원본을 바꾸지않지만, 의도적으로 콜백함수를통해 변경할수도 있음
+- 내부에서 콜백함수로 전달받아 순회하며 반복호출(반복문 실행과 동일)
+- 배열이 엄청많거나 시간복잡도가 높은 코드가 아니라면 for문대신 forEach사용
+- forEach 메서드는 콜백함수에 세개의 인수를 전달
+    - forEach 메서드를 호출한 배열의 요소값, 인덱스
+    - forEach 메서드를 호출한 배열(this)
+    - 여기서 this는 콜백함수내부 this가 아닌, forEach메서드 내부의 this
+```
+// forEach 메서드는 콜백 함수를 호출하면서 3개(요소값, 인덱스, this)의 인수를 전달한다.
+// JSON.stringify 메서드는 객체를 JSON 포맷의 문자열로 변환
+[1, 2, 3].forEach((item, index, arr) => {
+  console.log(`요소값: ${item}, 인덱스: ${index}, this: ${JSON.stringify(arr)}`);
+});
+/*
+요소값: 1, 인덱스: 0, this: [1,2,3]
+요소값: 2, 인덱스: 1, this: [1,2,3]
+요소값: 3, 인덱스: 2, this: [1,2,3]
+*/
+```
+```
+const numbers = [1, 2, 3];
+
+// forEach 메서드는 원본 배열을 변경하지 않지만 콜백 함수를 통해 원본 배열을 변경할 수는 있다.
+// 콜백 함수의 세 번째 매개변수 arr은 원본 배열 numbers를 가리킨다.
+// 따라서 콜백 함수의 세 번째 매개변수 arr을 직접 변경하면 원본 배열 numbers가 변경된다.
+numbers.forEach((item, index, arr) => { arr[index] = item ** 2; });
+console.log(numbers); // [1, 4, 9]
+```
+- forEach 메서드의 반환값은 항상 undefined다 (why.....????)
+    - 이 메서드의 활용이 하나의 값을얻기위한건 아니다 반복문을 돌리는게목적이지 ...그래서 언디파인드? 이해불가..
+    - break 같은 마무리제어가 없어서 순회하다가 마지막에 없는값을 출력하는건가 ? 질문해봐야겠다..
+- forEach 메서드의 두 번째 인수로 forEach 메서드의 콜백 함수 내부에서 this로 사용할 객체를 전달할 수 있다
+    - 이때 두번쨰 인수로 전달하지않으면 ? 콜백함수가 일반함수로 호출되고 strict mode 때문에 undefined 참조해버림
+    - but,,, 화살표함수 사용하면 자동으로 상위 this 참조하므로 훨씬간단
+```
+class Numbers {
+  numberArray = [];
+
+  multiply(arr) {
+    // 화살표 함수 내부에서 this를 참조하면 상위 스코프의 this를 그대로 참조한다.
+    arr.forEach(item => this.numberArray.push(item * item));
+  }
+}
+
+const numbers = new Numbers();
+numbers.multiply([1, 2, 3]);
+console.log(numbers.numberArray); // [1, 4, 9]
+```
+#### 폴리필 polyfill
+- 낮은단계의 브라우저에서 누락된 최신기능을 구현해서 추가하는것
+```
+// 만약 Array.prototype에 forEach 메서드가 존재하지 않으면 폴리필을 추가한다.
+if (!Array.prototype.forEach) {
+  Array.prototype.forEach = function (callback, thisArg) {
+    // 첫 번째 인수가 함수가 아니면 TypeError를 발생시킨다.
+    if (typeof callback !== 'function') {
+      throw new TypeError(callback + ' is not a function');
+    }
+
+    // this로 사용할 두 번째 인수를 전달받지 못하면 전역 객체를 this로 사용한다.
+    thisArg = thisArg || window;
+
+    // for 문으로 배열을 순회하면서 콜백 함수를 호출한다.
+    for (var i = 0; i < this.length; i++) {
+      // call 메서드를 통해 thisArg를 전달하면서 콜백 함수를 호출한다.
+      // 이때 콜백 함수의 인수로 배열 요소, 인덱스, 배열 자신을 전달한다.
+      callback.call(thisArg, this[i], i, this);
+    }
+  };
+}
+```
+### Array.prototype.map
+- 자신을 호출한 배열의 모든요소를 순회하며 콜백함수를 반복호출
+- 그리고 반환된 값들을 요소로하는 새로운 배열을 반환(원본은 유지)
+- 요소값을 다른값으로 mapping한 새 배열을 생성하는 고차함수
+    - 1:1 mapping 하므로 호출한 배열과 반환된배열의 length 값은 같다
+- forEach와 동일하게 배열의요소값,인덱스,호출한배열(this)를 콜백함수에 전달하고, map 메서드의 두번쨰 인수로 콜백함수에 this로 사용할 객체전달가능
+- 이것도 마찬가지로 화살표함수를 쓰는것이 best
+```
+class Prefixer {
+  constructor(prefix) {
+    this.prefix = prefix;
+  }
+
+  add(arr) {
+    // 화살표 함수 내부에서 this를 참조하면 상위 스코프의 this를 그대로 참조한다.
+    return arr.map(item => this.prefix + item);
+  }
+}
+
+const prefixer = new Prefixer('-webkit-');
+console.log(prefixer.add(['transition', 'user-select']));
+// ['-webkit-transition', '-webkit-user-select']
+```
+### Array.prototype.filter
+- 호출한 배열의 모든요소를 순회하며 인수로받은 콜백함수를 반복호출
+- 반환값이 true 은 요소로만 구성된 배열반환
+- 반환된배열의 length값이 원본보다 같거나 작다
+- 다른특징들은 모두 forEach,map과 같다
+- 역으로 응용하면 원하지않는 값을 선택해 제거할수있다(중복되면 중복된값이 다지워짐을 주의)
+```
+const numbers = [1, 2, 3, 4, 5];
+
+// filter 메서드는 numbers 배열의 모든 요소를 순회하면서 콜백 함수를 반복 호출한다.
+// 그리고 콜백 함수의 반환값이 true인 요소로만 구성된 새로운 배열을 반환한다.
+// 다음의 경우 numbers 배열에서 홀수인 요소만을 필터링한다(1은 true로 평가된다).
+const odds = numbers.filter(item => item % 2);
+console.log(odds); // [1, 3, 5]
+```
+### Array.prototype.reduce
+- 호출한 배열의 모든요소 순회하며 인수로받은 콜백함수 반복호출
+- 반환값을 다음 순회시에 콜백함수의 첫번째 인수로 전달하며 반복반복, 결국 하나의 값을 만들어 반환(원본유지)
+- 첫번째인수는 콜백함수
+- 두번째인수는 초기값
+- 콜백함수에는 초기값or콜백함수 이전 반환값, reduce를 호출한 배열의 요소값,인덱스, reduce호출한배열(this)가 전달됨
+- 평균값, 최대값, 요소중복횟수, 중첩배열평탄화, 중복요소제거 모두가능 but best는 아님
+- 초기값은 생략가능하지만, 전달하는것이 better
+    - 빈 배열이나 프로퍼티값을 합산할떄는 오류발생함.
+```
+const products = [
+  { id: 1, price: 100 },
+  { id: 2, price: 200 },
+  { id: 3, price: 300 }
+];
+
+// 1번째 순회 시 acc는 { id: 1, price: 100 }, cur은 { id: 2, price: 200 }이고
+// 2번째 순회 시 acc는 300, cur은 { id: 3, price: 300 }이다.
+// 2번째 순회 시 acc에 함수에 객체가 아닌 숫자값이 전달된다. 이때 acc.price는 undefined다.
+const priceSum = products.reduce((acc, cur) => acc.price + cur.price);
+
+console.log(priceSum); // NaN
+```
+### Array.prototype.some
+- 호출한배열의 요소를 순회하며 인수로전달된 콜백함수 호출
+- 반환값이 한번이라도 참이면 true, 모두 거짓일때만 false
+- 결과값을 불리언타입으로 반환/ 빈배열일땐 항상 false
+### Array.prototype.evey
+- 반환값이 한번이라도 거짓이면 false, 모두 참일때만 true
+- 결과값을 불리언타입으로 반환/ 빈배열일땐 항상 true
