--- a/배열.md
+++ b/배열.md
@@ -397,7 +397,6 @@ if (!Array.prototype.forEach) {
 }
 ```
 ### Array.prototype.map
-- 자신을 호출한 배열의 모든요소를 순회하며 콜백함수를 반복호출
 - 그리고 반환된 값들을 요소로하는 새로운 배열을 반환(원본은 유지)
 - 요소값을 다른값으로 mapping한 새 배열을 생성하는 고차함수
     - 1:1 mapping 하므로 호출한 배열과 반환된배열의 length 값은 같다
@@ -420,7 +419,6 @@ console.log(prefixer.add(['transition', 'user-select']));
 // ['-webkit-transition', '-webkit-user-select']
 ```
 ### Array.prototype.filter
-- 호출한 배열의 모든요소를 순회하며 인수로받은 콜백함수를 반복호출
 - 반환값이 true 은 요소로만 구성된 배열반환
 - 반환된배열의 length값이 원본보다 같거나 작다
 - 다른특징들은 모두 forEach,map과 같다
@@ -435,7 +433,6 @@ const odds = numbers.filter(item => item % 2);
 console.log(odds); // [1, 3, 5]
 ```
 ### Array.prototype.reduce
-- 호출한 배열의 모든요소 순회하며 인수로받은 콜백함수 반복호출
 - 반환값을 다음 순회시에 콜백함수의 첫번째 인수로 전달하며 반복반복, 결국 하나의 값을 만들어 반환(원본유지)
 - 첫번째인수는 콜백함수
 - 두번째인수는 초기값
@@ -458,9 +455,17 @@ const priceSum = products.reduce((acc, cur) => acc.price + cur.price);
 console.log(priceSum); // NaN
 ```
 ### Array.prototype.some
-- 호출한배열의 요소를 순회하며 인수로전달된 콜백함수 호출
 - 반환값이 한번이라도 참이면 true, 모두 거짓일때만 false
 - 결과값을 불리언타입으로 반환/ 빈배열일땐 항상 false
 ### Array.prototype.evey
 - 반환값이 한번이라도 거짓이면 false, 모두 참일때만 true
 - 결과값을 불리언타입으로 반환/ 빈배열일땐 항상 true
+### Array.prototype.find
+- ES6 반환값이 true인 첫번째요소 반환/ 없으면 undefined
+- 반환값이 배열이아닌 요소값임을 주의
+### Array.prototype.findIndex
+- ES6 반환값이 true인 첫번째요소의 인덱스를 반환/ 없으면 -1
+### Array.prototype.flatMap
+- ES10 map 메서드를통해 생성된 새로운배열을 평탄화
+    - map메서드와 flat 메서드를 순차적으로쓰는것과 같은효과
+- 단 flat과 다르게 깊이지정할수없고 **1단계만** 평탄화
