--- a/배열.md
+++ b/배열.md
@@ -354,8 +354,7 @@ numbers.forEach((item, index, arr) => { arr[index] = item ** 2; });
 console.log(numbers); // [1, 4, 9]
 ```
 - forEach 메서드의 반환값은 항상 undefined다 (why.....????)
-    - 이 메서드의 활용이 하나의 값을얻기위한건 아니다 반복문을 돌리는게목적이지 ...그래서 언디파인드? 이해불가..
-    - break 같은 마무리제어가 없어서 순회하다가 마지막에 없는값을 출력하는건가 ? 질문해봐야겠다..
+    - 이 메서드의 활용이 하나의 값을얻기위한건 아니다 반복문을 돌리는게목적, 리턴필요없음(대신 map filter쓰면된다)
 - forEach 메서드의 두 번째 인수로 forEach 메서드의 콜백 함수 내부에서 this로 사용할 객체를 전달할 수 있다
     - 이때 두번쨰 인수로 전달하지않으면 ? 콜백함수가 일반함수로 호출되고 strict mode 때문에 undefined 참조해버림
     - but,,, 화살표함수 사용하면 자동으로 상위 this 참조하므로 훨씬간단
