--- a/수업용어.md
+++ b/수업용어.md
@@ -31,5 +31,19 @@ const add = a => a + 1;
 - 배열 파이썬의 리스트느낌
 - element 요소
 
-- 배열은 애초에 반복문과 잘 맞물려서 중요한건데..
-- 희소배열이라면? 의미가없다...
+- 배열은 애초에 반복문과 잘 맞물려서 중요
+- 희소배열
+- 헤시테이블
+- 임의접근 random access
+- 프로토타입  
+- 생성자함수는 프로퍼티가 같은구조를가진 객체를 여러개 생성할때 유용함(like python class)
+- 프로토타입체인 과 스코프체인
+- 정적메서드 (본체에) / 인스턴스없이 호출
+
+/ 이 두개는 인스턴스 있어야 호출가능하다
+- 프로토타입메서드 (프로토타입프로퍼티에)
+- 인스턴스메서드 (결과로 생성된 인스턴스(배열)에)
+
+- mutator 원본을 바꾸는거
+- accessor 접근만해서 뽑는거
+- accessor만 푸는게좋다
