--- a/배열.md
+++ b/배열.md
@@ -223,6 +223,7 @@ concat은 반환값을 변수에 할당받아야함
 - filter 메서드도 특정요소를 제거가능, but 특정요소가 중복되면 전부다지움
 ### Array.prototype.slice
 - 인수로 전달된 범위의 요소들을 복사해서 배열로 반환
+  - 복사도 요즘은 spread문법으로 그냥 복사한다
 - 매개변수 2개
     - start : 복사를 시작할 인덱스 ( 음수면 뒤에서부터)
     - end : 복사를 종료할 인덱스 (생략가능/ 생략하면 끝가지지움, 이 인덱스에 해당하는값은 안지움 // start=1 end=3 이면 1,2까지만 지운다)
