--- a/수업용어.md
+++ b/수업용어.md
@@ -23,7 +23,11 @@ const add = a => a + 1;
 - 브라우저와 노드의 콘솔이 서로찍어주는값이 다르다
 - 에크마스크립트에 언급되지않은것들은 모두 비표준이라 생각
     - 한마디로 콘솔에 나오는 내용들은 서로 다르다 표준이없으니까
-- Rest parameter
+- Rest parameter : 풀어져있는걸 배열로 모으는개념[...args]
+- 스프레드문법 : 모아져있는걸 푸는개념 [...풀려는배열]
+    - 똑같은배열 copy 후 푼다(원본에 영향X)
+    - 스프레드문법은 표현식이다 -> 그냥 바로작동이되지만
+    - 같은역할하는 concat메서드는 함수다 -> 함수니까 고려할사항이더있다
 - reduce 메서드
 - 콜백함수
 - caller
@@ -44,6 +48,19 @@ const add = a => a + 1;
 - 프로토타입메서드 (프로토타입프로퍼티에)
 - 인스턴스메서드 (결과로 생성된 인스턴스(배열)에)
 
-- mutator 원본을 바꾸는거
+- mutator 원본을 바꾸는거 // 이건 원본을 바꾸니까 새로받을필요 없음
 - accessor 접근만해서 뽑는거
-- accessor만 푸는게좋다
+- accessor만 푸는게좋다 // accessor 쓰면 원본이아니라 새로운 배열을 만들기떄문에 반드시 변수로 받아줘야한다
+
+- 선입선출FIFO 후입선출LIFO
+
+- 얕은복사와 깊은복사  
+- 얕은복사 : 복사하면 배열까진복사하는데 배열안의 요소들까진 복사되지않음 
+    - why? 자료량이 많을때 요소까지 다복사? 메모리소모크고 시간도오래걸려
+    - 객체는 복사해서 새로운 객체를 만드니까 즉 주솟값이 다른 두객체가 되니까 같지않음
+    - 하지만 안의 요소는 그대로복사했으니 요소내용은 같음
+
+- 깊은복사 : 다복사된다 안의요소도 같지않다..? 더찾아보기
+
+
+- lodash 라이브러리
