내부슬롯과메서드,프로퍼티 내용추가

--- a/13.프로퍼티 어트리뷰트.md
+++ b/13.프로퍼티 어트리뷰트.md
@@ -1,1 +1,66 @@
 # 내부슬롯과 내부메서드
+- 자바스크립트 엔진의 구현 알고리즘을 설명하기위해, ECMAscript사양에서 사용하는 pseudo property, pseudomethod 로 이중대괄호로 감싸진것들
+- 엔진은 접근가능하지만, 개발자가 직접 접근할수는없고 간접접근만 가능
+    - 예시로 [[prototype]]은 __proto__ 로 개발자가 간접접근 가능
+
+## 프로퍼티 어트리뷰트와 프로퍼티 디스크립터 객체
+- 자바스크립트엔진은 프로퍼티 생성시 프로퍼티의 상태를나타내는 **프로퍼티 어트리퓨트**를 자동 정의
+    - 프로퍼티 상태란?  
+    프로퍼티값 value ,값갱신여부 writable ,열거가능여부 enumerable,재정가능여부 configurable
+- 프로퍼티 어트리뷰트 ?
+    - 자바스크립트 엔진이 관리하는 내부상태값(meta-property)인 내부슬롯[[Value]], [[Writable]], [[Enumerable]], [[Configurable]]
+    - 내부슬롯은 직접접근 불가, Object.getOwnPropertyDescriptors 메서드로 간접적 확인가능
+```
+const person = {
+  name: 'Lee'
+};
+
+// 프로퍼티 동적 생성
+person.age = 20;
+
+// 모든 프로퍼티의 프로퍼티 어트리뷰트 정보를 제공하는 프로퍼티 디스크립터 객체들을 반환한다.
+console.log(Object.getOwnPropertyDescriptors(person));
+/*
+{
+  name: {value: "Lee", writable: true, enumerable: true, configurable: true},
+  age: {value: 20, writable: true, enumerable: true, configurable: true}
+}
+*/
+```
+---
+## 데이터프로퍼티와 접근자프로퍼티
+- 데이터프로퍼티 : 키와 값으로 구성된 일반적프로퍼티
+- 접근자프로퍼티 : 자체적 값은 없고 다른 데이터의 프로퍼티를 읽거나 저장할때 호출되는 접근자함수(accessor function)로 구성된 프로퍼티
+### 데이터 프로퍼티
+- 자바스크립트엔진이 프로퍼티를 생성할때 기본값으로 자동 정의됨
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: left">프로퍼티 어트리뷰트</th>
+      <th style="text-align: left">프로퍼티 디스크립터 객체의 프로퍼티</th>
+      <th style="text-align: left">설명</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: left">[[Value]]</td>
+      <td style="text-align: left">value</td>
+      <td style="text-align: left">-	프로퍼티 키를 통해 프로퍼티 값에 접근하면 반환되는 값이다.<br> -	 프로퍼티 키를 통해 프로퍼티 값을 변경하면 [[Value]]에 값을 재할당한다. 이때 프로퍼티가 없으면 프로퍼티를 동적 생성하고 생성된 프로퍼티의 [[Value]]에 값을 저장한다.</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">[[Writable]]</td>
+      <td style="text-align: left">writable</td>
+      <td style="text-align: left">- 프로퍼티 값의 변경 가능 여부를 나타내며 불리언 값을 갖는다.<br> - [[Writable]]의 값이 false인 경우 해당 프로퍼티의 [[Value]]의 값을 변경할 수 없는 읽기 전용 프로퍼티가 된다.</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">[[Enumerable]]</td>
+      <td style="text-align: left">enumerable</td>
+      <td style="text-align: left">- 프로퍼티의 열거 가능 여부를 나타내며 불리언 값을 갖는다.<br> - [[Enumerable]]의 값이 false인 경우 해당 프로퍼티는 for…in 문이나 Object.keys 메서드 등으로 <a href="/fastcampus/prototype#14-프로퍼티-열거">열거</a>할 수 없다.</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">[[Configurable]]</td>
+      <td style="text-align: left">configurable</td>
+      <td style="text-align: left">- 프로퍼티의 재정의 가능 여부를 나타내며 불리언 값을 갖는다.<br> - [[Configurable]]의 값이 false인 경우 해당 프로퍼티의 삭제, 프로퍼티 어트리뷰트 값의 변경이 금지된다. 단, [[Writable]]이 true인 경우 [[Value]]의 변경과 [[Writable]]을 false로 변경하는 것은 허용된다.(<a href="/fastcampus/property-definition#52-객체-밀봉">“16.5.2. 객체 밀봉”</a>과 <a href="/fastcampus/property-definition#53-객체-동결">“16.5.3. 객체 동결”</a> 참고)</td>
+    </tr>
+  </tbody>
+</table>
