--- a/13.프로퍼티 어트리뷰트.md
+++ b/13.프로퍼티 어트리뷰트.md
@@ -64,3 +64,37 @@ console.log(Object.getOwnPropertyDescriptors(person));
     </tr>
   </tbody>
 </table>
+
+### 접근자 프로퍼티
+- 자체적으로는 값을 갖지 않고 다른 데이터 프로퍼티의 값을 읽거나 저장할 때 사용하는 접근자 함수(accessor function)로 구성된 프로퍼티
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: left">프로퍼티 어트리뷰트</th>
+      <th style="text-align: left">프로퍼티 디스크립터 객체의 프로퍼티</th>
+      <th style="text-align: left">설명</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: left">[[Value]]</td>
+      <td style="text-align: left">value</td>
+      <td style="text-align: left">-	프로퍼티 키를 통해 프로퍼티 값에 접근하면 반환되는 값이다.<br> -	 프로퍼티 키를 통해 프로퍼티 값을 변경하면 [[Value]]에 값을 재할당한다. 이때 프로퍼티가 없으면 프로퍼티를 동적 생성하고 생성된 프로퍼티의 [[Value]]에 값을 저장한다.</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">[[Writable]]</td>
+      <td style="text-align: left">writable</td>
+      <td style="text-align: left">- 프로퍼티 값의 변경 가능 여부를 나타내며 불리언 값을 갖는다.<br> - [[Writable]]의 값이 false인 경우 해당 프로퍼티의 [[Value]]의 값을 변경할 수 없는 읽기 전용 프로퍼티가 된다.</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">[[Enumerable]]</td>
+      <td style="text-align: left">enumerable</td>
+      <td style="text-align: left">- 프로퍼티의 열거 가능 여부를 나타내며 불리언 값을 갖는다.<br> - [[Enumerable]]의 값이 false인 경우 해당 프로퍼티는 for…in 문이나 Object.keys 메서드 등으로 <a href="/fastcampus/prototype#14-프로퍼티-열거">열거</a>할 수 없다.</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">[[Configurable]]</td>
+      <td style="text-align: left">configurable</td>
+      <td style="text-align: left">- 프로퍼티의 재정의 가능 여부를 나타내며 불리언 값을 갖는다.<br> - [[Configurable]]의 값이 false인 경우 해당 프로퍼티의 삭제, 프로퍼티 어트리뷰트 값의 변경이 금지된다. 단, [[Writable]]이 true인 경우 [[Value]]의 변경과 [[Writable]]을 false로 변경하는 것은 허용된다.(<a href="/fastcampus/property-definition#52-객체-밀봉">“16.5.2. 객체 밀봉”</a>과 <a href="/fastcampus/property-definition#53-객체-동결">“16.5.3. 객체 동결”</a> 참고)</td>
+    </tr>
+  </tbody>
+</table>
