--- a/13.프로퍼티 어트리뷰트.md
+++ b/13.프로퍼티 어트리뷰트.md
@@ -6,7 +6,7 @@
 ## 프로퍼티 어트리뷰트와 프로퍼티 디스크립터 객체
 - 자바스크립트엔진은 프로퍼티 생성시 프로퍼티의 상태를나타내는 **프로퍼티 어트리퓨트**를 자동 정의
     - 프로퍼티 상태란?  
-    프로퍼티값 value ,값갱신여부 writable ,열거가능여부 enumerable,재정가능여부 configurable
+    프로퍼티값 value ,값갱신여부 writable ,열거가능여부 enumerable,재정의가능여부 configurable
 - 프로퍼티 어트리뷰트 ?
     - 자바스크립트 엔진이 관리하는 내부상태값(meta-property)인 내부슬롯[[Value]], [[Writable]], [[Enumerable]], [[Configurable]]
     - 내부슬롯은 직접접근 불가, Object.getOwnPropertyDescriptors 메서드로 간접적 확인가능
@@ -33,6 +33,9 @@ console.log(Object.getOwnPropertyDescriptors(person));
 - 접근자프로퍼티 : 자체적 값은 없고 다른 데이터의 프로퍼티를 읽거나 저장할때 호출되는 접근자함수(accessor function)로 구성된 프로퍼티
 ### 데이터 프로퍼티
 - 자바스크립트엔진이 프로퍼티를 생성할때 기본값으로 자동 정의됨
+- 프로퍼티가 생성될 때 [[Value]]의 값은 프로퍼티 값으로 초기화
+- [[Writable]], [[Enumerable]], [[Configurable]]의 값은 true로 초기화
+  - 이것은 프로퍼티를 동적 추가해도 마찬가지다
 <table>
   <thead>
     <tr>
@@ -67,6 +70,49 @@ console.log(Object.getOwnPropertyDescriptors(person));
 
 ### 접근자 프로퍼티
 - 자체적으로는 값을 갖지 않고 다른 데이터 프로퍼티의 값을 읽거나 저장할 때 사용하는 접근자 함수(accessor function)로 구성된 프로퍼티
+- 접근자 함수는 getter/setter 함수라고도 부름. 접근자 프로퍼티는 getter와 setter 함수를 모두 정의할 수도 있고 하나만 정의할 수도 있음
+```
+const person = {
+  // 데이터 프로퍼티
+  firstName: 'Ungmo',
+  lastName: 'Lee',
+
+  // fullName은 접근자 함수로 구성된 접근자 프로퍼티다.
+  // getter 함수
+  get fullName() {
+    return `${this.firstName} ${this.lastName}`;
+  },
+  // setter 함수
+  set fullName(name) {
+    // 배열 디스트럭처링 할당: "31.1 배열 디스트럭처링 할당" 참고
+    [this.firstName, this.lastName] = name.split(' ');
+  }
+};
+
+// 데이터 프로퍼티를 통한 프로퍼티 값의 참조.
+console.log(person.firstName + ' ' + person.lastName); // Ungmo Lee
+
+// 접근자 프로퍼티를 통한 프로퍼티 값의 저장
+// 접근자 프로퍼티 fullName에 값을 저장하면 setter 함수가 호출된다.
+person.fullName = 'Heegun Lee';
+console.log(person); // {firstName: "Heegun", lastName: "Lee"}
+
+// 접근자 프로퍼티를 통한 프로퍼티 값의 참조
+// 접근자 프로퍼티 fullName에 접근하면 getter 함수가 호출된다.
+console.log(person.fullName); // Heegun Lee
+
+// firstName은 데이터 프로퍼티다.
+// 데이터 프로퍼티는 [[Value]], [[Writable]], [[Enumerable]], [[Configurable]] 프로퍼티 어트리뷰트를 갖는다.
+let descriptor = Object.getOwnPropertyDescriptor(person, 'firstName');
+console.log(descriptor);
+// {value: "Heegun", writable: true, enumerable: true, configurable: true}
+
+// fullName은 접근자 프로퍼티다.
+// 접근자 프로퍼티는 [[Get]], [[Set]], [[Enumerable]], [[Configurable]] 프로퍼티 어트리뷰트를 갖는다.
+descriptor = Object.getOwnPropertyDescriptor(person, 'fullName');
+console.log(descriptor);
+// {get: ƒ, set: ƒ, enumerable: true, configurable: true}
+```
 <table>
   <thead>
     <tr>
@@ -98,3 +144,4 @@ console.log(Object.getOwnPropertyDescriptors(person));
     </tr>
   </tbody>
 </table>
+
