객체 변경방지 내용추가

--- a/13.프로퍼티 어트리뷰트.md
+++ b/13.프로퍼티 어트리뷰트.md
@@ -68,6 +68,8 @@ console.log(Object.getOwnPropertyDescriptors(person));
   </tbody>
 </table>
 
+<br></br>
+
 ### 접근자 프로퍼티
 - 자체적으로는 값을 갖지 않고 다른 데이터 프로퍼티의 값을 읽거나 저장할 때 사용하는 접근자 함수(accessor function)로 구성된 프로퍼티
 - 접근자 함수는 getter/setter 함수라고도 부름. 접근자 프로퍼티는 getter와 setter 함수를 모두 정의할 수도 있고 하나만 정의할 수도 있음
@@ -144,7 +146,7 @@ console.log(descriptor);
     </tr>
   </tbody>
 </table>
-</br>
+<br></br>
 
 ---
 
@@ -255,5 +257,84 @@ console.log(person); // {firstName: "Heegun", lastName: "Lee"}
     </tr>
   </tbody>
 </table>
+
 ---
-</br>
+
+<br></br>
+
+## 객체 변경 방지
+- 객체는 변경가능값, 재할당없이 직접변경 가능
+  - 프로퍼티 추가,삭제 및 프로퍼티값 갱신,재정의 가능
+
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: left">구분</th>
+      <th style="text-align: left">메서드</th>
+      <th style="text-align: center">프로퍼티 추가</th>
+      <th style="text-align: center">프로퍼티 삭제</th>
+      <th style="text-align: center">프로퍼티 값 읽기</th>
+      <th style="text-align: center">프로퍼티 값 쓰기</th>
+      <th style="text-align: center">프로퍼티 어트리뷰트 재정의</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: left">객체 확장 금지</td>
+      <td style="text-align: left">Object.preventExtensions</td>
+      <td style="text-align: center">✕</td>
+      <td style="text-align: center">○</td>
+      <td style="text-align: center">○</td>
+      <td style="text-align: center">○</td>
+      <td style="text-align: center">○</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">객체 밀봉</td>
+      <td style="text-align: left">Object.seal</td>
+      <td style="text-align: center">✕</td>
+      <td style="text-align: center">✕</td>
+      <td style="text-align: center">○</td>
+      <td style="text-align: center">○</td>
+      <td style="text-align: center">✕</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">객체 동결</td>
+      <td style="text-align: left">Object.freeze</td>
+      <td style="text-align: center">✕</td>
+      <td style="text-align: center">✕</td>
+      <td style="text-align: center">○</td>
+      <td style="text-align: center">✕</td>
+      <td style="text-align: center">✕</td>
+    </tr>
+  </tbody>
+</table>
+
+---
+
+<br></br>
+
+### 객체 확장 금지
+- Object.preventExtensions 메서드로 객체 확장금지(프로퍼티 추가 금지)
+  - 확장금지된 객체 = 프로퍼티추가 금지
+  - 프로퍼티동적추가 and Object.defineProperty 메서드사용 두가지 모두 금지
+  - Object.isExtensible 메서드로 확장가능여부 확인가능
+<br></br>
+
+### 객체 밀봉
+- Object.seal 메서드사용, 프로퍼티 추가,삭제 및 프로퍼티어트리뷰트 재정의 금지
+  - **밀봉된 객체는 읽기, 쓰기만 가능**
+  - Object.isSealed 메서드로 밀봉여부 확인가능
+
+<br></br>
+
+### 객체 동결
+- Object.freeze 메서드사용, 프로퍼티 추가,삭제 및 프로퍼티어트리뷰트 재정의 금지 + 프로퍼티 값 갱신 금지
+  - **동결된 객체는 읽기만가능**
+  - Object.isFrozen 메서드로 동결여부 확인가능
+
+<br></br>
+
+### 불변객체
+- 위에서 살펴본 메서드로는 얕은변경방지(shallow only)로 직속 프로퍼티만 변경방지
+  - 중첩객체는 영향주지않음(변경가능)
+- 중첩객체까지 동결하여 변경불가능한 읽기전용의 불변격체 immutable Object 를 만들기위해선 모든 프로퍼티에 재귀적으로 freeze메서드 호출해야함
