--- a/15.함수와일급객체.md
+++ b/15.함수와일급객체.md
@@ -7,3 +7,4 @@
     - So 함수는 값과 동일하게 취급
         - 값을 사용가능한곳은 어디서든 리터럴로 정의가능하며 런타임에 함수객체로 평가됨
         - 특히 일반객체와같이 매개변수에 전달가능,함수반환값으로 사용가능한것이 함수형 프로그래밍을 가능하게하는 장점
+    - 함수는 일반객체에는 없는 함수고유의 프로퍼티를 가짐
