Add 함수객체의 프로퍼티

--- a/15.함수와일급객체.md
+++ b/15.함수와일급객체.md
@@ -8,3 +8,64 @@
         - 값을 사용가능한곳은 어디서든 리터럴로 정의가능하며 런타임에 함수객체로 평가됨
         - 특히 일반객체와같이 매개변수에 전달가능,함수반환값으로 사용가능한것이 함수형 프로그래밍을 가능하게하는 장점
     - 함수는 일반객체에는 없는 함수고유의 프로퍼티를 가짐
+
+---
+
+## 함수 객체의 프로퍼티
+- 브라우저 콘솔에서 console.dir 메서드로 함수객체의 내부확인가능
+- Object.getOwnPropertyDescriptors 메서드로 함수의 모든 프로퍼티 어트리뷰트 확인가능
+    - arguments, caller, length, name, prototype 프로퍼티는 모두 함수 객체의 데이터 프로퍼티
+    - __proto__는 접근자 프로퍼티이며, 함수 객체 고유의 프로퍼티가 아니라 Object.prototype 객체의 프로퍼티를 상속받음
+<br></br>
+
+- arguments 프로퍼티
+    - arguments 프로퍼티값 = arguments 객체
+    - arguments 객체 : 함수 호출시 전달된 인수(argument)들의 정보를 담은 순회가능한(iteralbe) 유사배열객체, 함수 내부의 지역변수처럼 사용/ 외부에선 참조불가능
+    - ES3 이후부터는 arguments 프로퍼티는 폐지되어 Function.arguments 같은 방법은 지양, 대신 함수내부에서 지역변수처럼 사용가능한 arguments객체를 참조
+<br></br>
+
+- 함수 정의시 선언한 매개변수는 함수내에서 변수와 동일취급
+    - 함수 호출되면 암묵적으로 매개변수선언 후 undefined로 초기화->인수할당
+    - 매개변수보다 적은 인수를 전달하면 매개변수는 undefined 유지
+    - 매개변수보다 많은 인수를 전달하면 초과된인수 무시
+        - 이때 초과된 인수는 암묵적으로 arguments 객체의 프로퍼티로 보관됨
+        - arguments객체는 프로퍼티값으로 인수를, 프로퍼티 키는 인수의 순서를 나타냄
+        - callee 프로퍼티는 호출되어 arguments 객체를 생성한 함수, 즉 자신을 가리키고 이때 arguments객체의 length프로퍼티는 인수의 개수를 가리킴
+<br></br>
+
+- arguments 객체의 Symbol.iterator 프로퍼티
+    - arguments 객체를 iterable로 만들어주는 프로퍼티
+    - (이후 이터러블에서 다시공부)
+<br></br>
+
+- arguments 객체는 매개변수 개수를 확정할수없는 가변인자함수 구현에 유용
+    - why? 배열형태로 인자정보를 가지지만 실제 배열이아닌 유사배열객체, 즉 length프로퍼티를 가진 for문으로 순회가능한 객체이므로
+<br></br>
+
+- caller 프로퍼티
+    - 비표준 프로퍼티로 알아만두자
+    - 함수객체의 caller 프로퍼티는 함수자신을 호출한 함수를 가리킴
+<br></br>
+
+- length 프로퍼티
+    - 함수 정의시 선언한 매개변수의 개수
+    - arguments객체와 함수객체의 length 프로퍼티값이 다를수있음을 기억
+        - why? argument 와 parameter의 갯수가 다를수 있으니깐
+<br></br>
+
+- name 프로퍼티 ES6
+        - 함수의 이름 , ES6 부터 정식표준 (ES5, ES6의 동작이 다름)
+        - 익명함수 표현식에서 ES5는 빈문자열, ES6는 함수객체의 식별자값
+    - 함수이름과 함수객체를가리키는 식별자는 의미가 다름을 기억하자
+        - **함수 호출시에는 이름이아닌 식별자로 호출**
+<br></br>
+
+- __proto__ 접근자 프로퍼티
+    - 모든 객체는 [[Prototype]] 이라는 내부슬롯 가짐
+    - 객체지향 프로그램의 상속을 구현하는 프로토타임객체를 가리킴
+    - 다음장 프로토타입에서 깊게 공부
+<br></br>
+
+- prototype 프로퍼티
+    - 생성자 함수로 호출가능한 함수객체, constructor만 가지는 프로퍼티
+    - 일반객체와 생성자함수로는 호출불가능한 non-constructor는 가지지않음
