--- a/16.프로토타입.md
+++ b/16.프로토타입.md
@@ -4,4 +4,33 @@
 - 객체 : 속성을 통해 여러개의 값을 하나의 단위로 구성한 복합적 자료구조
 - 이때 객체지향 프로그래밍은 객체의 **상태(state)를 나타내는 데이터**, **상태 데이터를 조작할수있는 동작(behavior)**을 하나의 단위로 묶어서 생각함
 
+## 상속과 프로토타입
+- 상속 inheritance : OOP의 핵심개념, 객체의 프로퍼티나 메서드를 다른객체가 상속받아 그대로 사용할 수 있는것
+- 자바스크립트는 프로토타입 기반으로 상속을 구현-> 불필요한 중복제거
+    - 중복제거? 기존의 코드 재사용
+- **프로토타입 기반의 상속**
+```
+// 생성자 함수
+function Circle(radius) {
+  this.radius = radius;
+}
 
+// Circle 생성자 함수가 생성한 모든 인스턴스가 getArea 메서드를
+// 공유해서 사용할 수 있도록 프로토타입에 추가한다.
+// 프로토타입은 Circle 생성자 함수의 prototype 프로퍼티에 바인딩되어 있다.
+Circle.prototype.getArea = function () {
+  return Math.PI * this.radius ** 2;
+};
+
+// 인스턴스 생성
+const circle1 = new Circle(1);
+const circle2 = new Circle(2);
+
+// Circle 생성자 함수가 생성한 모든 인스턴스는 부모 객체의 역할을 하는
+// 프로토타입 Circle.prototype으로부터 getArea 메서드를 상속받는다.
+// 즉, Circle 생성자 함수가 생성하는 모든 인스턴스는 하나의 getArea 메서드를 공유한다.
+console.log(circle1.getArea === circle2.getArea); // true
+
+console.log(circle1.getArea()); // 3.141592653589793
+console.log(circle2.getArea()); // 12.566370614359172
+```
