--- a/16.프로토타입.md
+++ b/16.프로토타입.md
@@ -72,3 +72,9 @@ Object.setPrototypeOf(obj, parent); // obj.__proto__ = parent;
 
 console.log(obj.x); // 1
 ```
+
+## 함수객체의 prototype 프로퍼티
+- 함수객체만이 소유하는 prototype 프로퍼티는 생성자함수가 생성할 인스턴스의 프로토타입을 가리킴
+- So 생성자함수로서 호출불가능한 함수(non-constructor인 화살표함수와 ES6메서드)는 prototype 프로퍼티 없음, 프로토타입도 생성하지 않음
+- 일반함수는 prototype프로퍼티를 가지지만, 객체를 생성하지않아 의미없음
+- 
